--- a/artikel/05.tex
+++ b/artikel/05.tex
@@ -48,7 +48,7 @@
 
   \end{enumerate}
 
-  \item Der Verantwortliche ist für die Einhaltung des \hyperref[itm:05-1]{Absatzes 1} verantwortlich und muss dessen
+  \item Der \hyperref[itm:04-7]{Verantwortliche} ist für die Einhaltung des \hyperref[itm:05-1]{Absatzes 1} verantwortlich und muss dessen
    Einhaltung nachweisen können („Rechenschaftspflicht“).
   \label{itm:05-2}
 
