--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -19,7 +19,7 @@
      zur Durchführung vorvertraglicher Maßnahmen erforderlich, die auf Anfrage der \hyperref[itm:04-1]{betroffenen Person} erfolgen;
     \label{itm:06-1b}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Erfüllung einer rechtlichen Verpflichtung erforderlich, der der Verantwortliche
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Erfüllung einer rechtlichen Verpflichtung erforderlich, der der \hyperref[itm:04-7]{Verantwortliche}
      unterliegt;
     \label{itm:06-1c}
 
@@ -28,10 +28,10 @@
     \label{itm:06-1d}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Wahrnehmung einer Aufgabe erforderlich, die im öffentlichen Interesse liegt oder
-     in Ausübung öffentlicher Gewalt erfolgt, die dem Verantwortlichen übertragen wurde;
+     in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde;
     \label{itm:06-1e}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen des Verantwortlichen oder eines Dritten
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen des \hyperref[itm:04-7]{Verantwortlichen} oder eines Dritten
      erforderlich, sofern nicht die Interessen oder Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Person}, die den
      Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der \hyperref[itm:04-1]{betroffenen Person}
      um ein Kind handelt.
@@ -57,17 +57,17 @@
     \item Unionsrecht oder
     \label{itm:06-3a}
 
-    \item das Recht der Mitgliedstaaten, dem der Verantwortliche unterliegt.
+    \item das Recht der Mitgliedstaaten, dem der \hyperref[itm:04-7]{Verantwortliche} unterliegt.
     \label{itm:06-3b}
 
   \end{enumerate}
 
   Der Zweck der \hyperref[itm:04-2]{Verarbeitung} muss in dieser Rechtsgrundlage festgelegt oder hinsichtlich der \hyperref[itm:04-2]{Verarbeitung} gemäß
   \hyperref[itm:06-1e]{Absatz 1 Buchstaben e} für die Erfüllung einer Aufgabe erforderlich sein, die im öffentlichen
-   Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem Verantwortlichen übertragen wurde. Diese
+   Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde. Diese
    Rechtsgrundlage kann spezifische Bestimmungen zur Anpassung der Anwendung der Vorschriften dieser Verordnung
    enthalten, unter anderem Bestimmungen darüber, welche allgemeinen Bedingungen für die Regelung der Rechtmäßigkeit
-   der \hyperref[itm:04-2]{Verarbeitung} durch den Verantwortlichen gelten, welche Arten von Daten verarbeitet werden, welche Personen
+   der \hyperref[itm:04-2]{Verarbeitung} durch den \hyperref[itm:04-7]{Verantwortlichen} gelten, welche Arten von Daten verarbeitet werden, welche Personen
    betroffen sind, an welche Einrichtungen und für welche Zwecke die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt werden dürfen,
    welcher Zweckbindung sie unterliegen, wie lange sie gespeichert werden dürfen und welche Verarbeitungsvorgänge
    und -verfahren angewandt werden dürfen, einschließlich Maßnahmen zur Gewährleistung einer rechtmäßig und nach Treu
@@ -78,7 +78,7 @@
   \item Beruht die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck als zu demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben
    wurden, nicht auf der Einwilligung der \hyperref[itm:04-1]{betroffenen Person} oder auf einer Rechtsvorschrift der Union oder der
    Mitgliedstaaten, die in einer demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz
-   der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der Verantwortliche --
+   der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der \hyperref[itm:04-7]{Verantwortliche} --
    um festzustellen, ob die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck mit demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten}
    ursprünglich erhoben wurden, vereinbar ist -- unter anderem
   \label{itm:06-4}
@@ -90,7 +90,7 @@
     \label{itm:06-4a}
 
     \item den Zusammenhang, in dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, insbesondere hinsichtlich des
-     Verhältnisses zwischen den \hyperref[itm:04-1]{betroffenen Personen} und dem Verantwortlichen,
+     Verhältnisses zwischen den \hyperref[itm:04-1]{betroffenen Personen} und dem \hyperref[itm:04-7]{Verantwortlichen},
     \label{itm:06-4b}
 
     \item die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, insbesondere ob besondere Kategorien \hyperref[itm:04-1]{personenbezogener Daten} gemäß
