--- a/artikel/08.tex
+++ b/artikel/08.tex
@@ -16,7 +16,7 @@
    Die Mitgliedstaaten können durch Rechtsvorschriften zu diesen Zwecken eine niedrigere Altersgrenze vorsehen, die
    jedoch nicht unter dem vollendeten dreizehnten Lebensjahr liegen darf.
 
-  \item Der Verantwortliche unternimmt unter Berücksichtigung der verfügbaren Technik angemessene Anstrengungen, um sich
+  \item Der \hyperref[itm:04-7]{Verantwortliche} unternimmt unter Berücksichtigung der verfügbaren Technik angemessene Anstrengungen, um sich
    in solchen Fällen zu vergewissern, dass die Einwilligung durch den Träger der elterlichen Verantwortung für das Kind
    oder mit dessen Zustimmung erteilt wurde.
   \label{itm:08-2}
