--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -23,7 +23,7 @@
      werden,
     \label{itm:09-2a}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist erforderlich, damit der Verantwortliche oder die \hyperref[itm:04-1]{betroffene Person} die ihm bzw. ihr aus
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist erforderlich, damit der \hyperref[itm:04-7]{Verantwortliche} oder die \hyperref[itm:04-1]{betroffene Person} die ihm bzw. ihr aus
      dem Arbeitsrecht und dem Recht der sozialen Sicherheit und des Sozialschutzes erwachsenden Rechte ausüben und
      seinen bzw. ihren diesbezüglichen Pflichten nachkommen kann, soweit dies nach Unionsrecht oder dem Recht der
      Mitgliedstaaten oder einer Kollektivvereinbarung nach dem Recht der Mitgliedstaaten, das geeignete Garantien für
