--- a/artikel/12.tex
+++ b/artikel/12.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Der Verantwortliche trifft geeignete Maßnahmen, um der \hyperref[itm:04-1]{betroffenen Person} alle Informationen gemäß den Artikeln
+  \item Der \hyperref[itm:04-7]{Verantwortliche} trifft geeignete Maßnahmen, um der \hyperref[itm:04-1]{betroffenen Person} alle Informationen gemäß den Artikeln
    \hyperref[ch:13]{13} und \hyperref[ch:14]{14} und alle Mitteilungen gemäß den Artikeln \hyperref[ch:15]{15} bis
    \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34}, die sich auf die \hyperref[itm:04-2]{Verarbeitung} beziehen, in präziser,
     transparenter, verständlicher und leicht zugänglicher Form in einer klaren und einfachen Sprache zu übermitteln;
@@ -16,23 +16,23 @@
     nachgewiesen wurde.
   \label{itm:12-1}
 
-  \item Der Verantwortliche erleichtert der \hyperref[itm:04-1]{betroffenen Person} die Ausübung ihrer Rechte gemäß den Artikeln \hyperref
+  \item Der \hyperref[itm:04-7]{Verantwortliche} erleichtert der \hyperref[itm:04-1]{betroffenen Person} die Ausübung ihrer Rechte gemäß den Artikeln \hyperref
    [ch:15]{15} bis \hyperref[ch:22]{22}. In den in \hyperref[itm:11-2]{Artikel 11 Absatz 2} genannten Fällen darf sich
-   der Verantwortliche nur dann weigern, aufgrund des Antrags der \hyperref[itm:04-1]{betroffenen Person} auf Wahrnehmung ihrer Rechte gemäß
+   der \hyperref[itm:04-7]{Verantwortliche} nur dann weigern, aufgrund des Antrags der \hyperref[itm:04-1]{betroffenen Person} auf Wahrnehmung ihrer Rechte gemäß
    den Artikeln \hyperref[ch:15]{15} bis \hyperref[ch:22]{22} tätig zu werden, wenn er glaubhaft macht, dass er nicht
    in der Lage ist, die \hyperref[itm:04-1]{betroffene Person} zu identifizieren.
   \label{itm:12-2}
 
-  \item Der Verantwortliche stellt der \hyperref[itm:04-1]{betroffenen Person} Informationen über die auf Antrag gemäß den Artikeln \hyperref
+  \item Der \hyperref[itm:04-7]{Verantwortliche} stellt der \hyperref[itm:04-1]{betroffenen Person} Informationen über die auf Antrag gemäß den Artikeln \hyperref
    [ch:15]{15} bis \hyperref[ch:22]{22} ergriffenen Maßnahmen unverzüglich, in jedem Fall aber innerhalb eines Monats
    nach Eingang des Antrags zur Verfügung. Diese Frist kann um weitere zwei Monate verlängert werden, wenn dies unter
-   Berücksichtigung der Komplexität und der Anzahl von Anträgen erforderlich ist. Der Verantwortliche unterrichtet die
+   Berücksichtigung der Komplexität und der Anzahl von Anträgen erforderlich ist. Der \hyperref[itm:04-7]{Verantwortliche} unterrichtet die
    \hyperref[itm:04-1]{betroffene Person} innerhalb eines Monats nach Eingang des Antrags über eine Fristverlängerung, zusammen mit den
    Gründen für die Verzögerung. Stellt die \hyperref[itm:04-1]{betroffene Person} den Antrag elektronisch, so ist sie nach Möglichkeit auf
    elektronischem Weg zu unterrichten, sofern sie nichts anderes angibt.
   \label{itm:12-3}
 
-  \item Wird der Verantwortliche auf den Antrag der \hyperref[itm:04-1]{betroffenen Person} hin nicht tätig, so unterrichtet er die
+  \item Wird der \hyperref[itm:04-7]{Verantwortliche} auf den Antrag der \hyperref[itm:04-1]{betroffenen Person} hin nicht tätig, so unterrichtet er die
    \hyperref[itm:04-1]{betroffene Person} ohne Verzögerung, spätestens aber innerhalb eines Monats nach Eingang des Antrags über die Gründe
    hierfür und über die Möglichkeit, bei einer \hyperref[itm:04-21]{Aufsichtsbehörde} Beschwerde einzulegen oder einen gerichtlichen
    Rechtsbehelf einzulegen.
@@ -41,7 +41,7 @@
   \item Informationen gemäß den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} sowie alle Mitteilungen und
    Maßnahmen gemäß den Artikeln \hyperref[ch:15]{15} bis \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34} werden
    unentgeltlich zur Verfügung gestellt. Bei offenkundig unbegründeten oder -- insbesondere im Fall von häufiger
-   Wiederholung -- exzessiven Anträgen einer \hyperref[itm:04-1]{betroffenen Person} kann der Verantwortliche entweder
+   Wiederholung -- exzessiven Anträgen einer \hyperref[itm:04-1]{betroffenen Person} kann der \hyperref[itm:04-7]{Verantwortliche} entweder
   \label{itm:12-5}
 
   \begin{enumerate}
@@ -55,10 +55,10 @@
 
   \end{enumerate}
 
-  Der Verantwortliche hat den Nachweis für den offenkundig unbegründeten oder exzessiven Charakter des Antrags zu
+  Der \hyperref[itm:04-7]{Verantwortliche} hat den Nachweis für den offenkundig unbegründeten oder exzessiven Charakter des Antrags zu
   erbringen.
 
-  \item Hat der Verantwortliche begründete Zweifel an der Identität der natürlichen Person, die den Antrag gemäß den
+  \item Hat der \hyperref[itm:04-7]{Verantwortliche} begründete Zweifel an der Identität der natürlichen Person, die den Antrag gemäß den
    Artikeln \hyperref[ch:15]{15} bis \hyperref[ch:21]{21} stellt, so kann er unbeschadet des \hyperref[ch:11]
    {Artikels 11} zusätzliche Informationen anfordern, die zur Bestätigung der Identität der \hyperref[itm:04-1]{betroffenen Person}
    erforderlich sind.
