--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -6,13 +6,13 @@
 
 \begin{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so teilt der Verantwortliche der
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so teilt der \hyperref[itm:04-7]{Verantwortliche} der
    \hyperref[itm:04-1]{betroffenen Person} Folgendes mit:
   \label{itm:14-1}
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des Verantwortlichen sowie gegebenenfalls seines Vertreters;
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} sowie gegebenenfalls seines Vertreters;
     \label{itm:14-1a}
 
     \item zusätzlich die Kontaktdaten des Datenschutzbeauftragten;
@@ -28,7 +28,7 @@
     \item gegebenenfalls die Empfänger oder Kategorien von Empfängern der \hyperref[itm:04-1]{personenbezogenen Daten};
     \label{itm:14-1e}
 
-    \item gegebenenfalls die Absicht des Verantwortlichen, die \hyperref[itm:04-1]{personenbezogenen Daten} an einen Empfänger in einem
+    \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]{personenbezogenen Daten} an einen Empfänger in einem
      Drittland oder einer internationalen Organisation zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
      Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46} oder
      \hyperref[ch:47]{Artikel 47} oder \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} einen Verweis auf die
@@ -38,7 +38,7 @@
 
   \end{enumerate}
 
-  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:14-1]{Absatz 1} stellt der Verantwortliche der \hyperref[itm:04-1]{betroffenen
+  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:14-1]{Absatz 1} stellt der \hyperref[itm:04-7]{Verantwortliche} der \hyperref[itm:04-1]{betroffenen
    Person} die folgenden Informationen zur Verfügung, die erforderlich sind, um der \hyperref[itm:04-1]{betroffenen Person} gegenüber eine
    faire und transparente \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten:
   \label{itm:14-2}
@@ -50,10 +50,10 @@
     \label{itm:14-2a}
 
     \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
-     Interessen, die von dem Verantwortlichen oder einem Dritten verfolgt werden;
+     Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem Dritten verfolgt werden;
     \label{itm:14-2b}
 
-    \item das Bestehen eines Rechts auf Auskunft seitens des Verantwortlichen über die betreffenden personenbezogenen
+    \item das Bestehen eines Rechts auf Auskunft seitens des \hyperref[itm:04-7]{Verantwortlichen} über die betreffenden personenbezogenen
      Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der Verarbeitung} und eines Widerspruchsrechts
      gegen die \hyperref[itm:04-2]{Verarbeitung} sowie des Rechts auf Datenübertragbarkeit;
     \label{itm:14-2c}
@@ -78,7 +78,7 @@
 
   \end{enumerate}
 
-  \item Der Verantwortliche erteilt die Informationen gemäß den Absätzen \hyperref[itm:14-1]{1} und \hyperref[itm:14-2]
+  \item Der \hyperref[itm:04-7]{Verantwortliche} erteilt die Informationen gemäß den Absätzen \hyperref[itm:14-1]{1} und \hyperref[itm:14-2]
   {2}
   \label{itm:14-3}
 
@@ -98,7 +98,7 @@
 
   \end{enumerate}
 
-  \item Beabsichtigt der Verantwortliche, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
+  \item Beabsichtigt der \hyperref[itm:04-7]{Verantwortliche}, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
    den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erlangt wurden, so stellt er der \hyperref[itm:04-1]{betroffenen Person} vor dieser
    Weiterverarbeitung Informationen über diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
    \hyperref[itm:14-2]{Absatz 2} zur Verfügung.
@@ -117,13 +117,13 @@
      wissenschaftliche oder historische Forschungszwecke oder für statistische Zwecke vorbehaltlich der in
      \hyperref[itm:89-1]{Artikel 89 Absatz 1} genannten Bedingungen und Garantien oder soweit die in \hyperref[itm:14-1]
       {Absatz 1 des vorliegenden Artikels} genannte Pflicht voraussichtlich die Verwirklichung der Ziele dieser
-      \hyperref[itm:04-2]{Verarbeitung} unmöglich macht oder ernsthaft beeinträchtigt In diesen Fällen ergreift der Verantwortliche
+      \hyperref[itm:04-2]{Verarbeitung} unmöglich macht oder ernsthaft beeinträchtigt In diesen Fällen ergreift der \hyperref[itm:04-7]{Verantwortliche}
       geeignete Maßnahmen zum Schutz der Rechte und Freiheiten sowie der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen
       Person}, einschließlich der Bereitstellung dieser Informationen für die Öffentlichkeit,
     \label{itm:14-5b}
 
     \item die Erlangung oder Offenlegung durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der
-     Verantwortliche unterliegt und die geeignete Maßnahmen zum Schutz der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen
+     \hyperref[itm:04-7]{Verantwortliche} unterliegt und die geeignete Maßnahmen zum Schutz der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen
      Person} vorsehen, ausdrücklich geregelt ist oder
     \label{itm:14-5c}
 
