--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem Verantwortlichen eine Bestätigung darüber zu verlangen, ob sie
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} eine Bestätigung darüber zu verlangen, ob sie
    betreffende \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet werden; ist dies der Fall, so hat sie ein Recht auf Auskunft über
    diese \hyperref[itm:04-1]{personenbezogenen Daten} und auf folgende Informationen:
   \label{itm:15-1}
@@ -29,7 +29,7 @@
     \label{itm:15-1d}
 
     \item das Bestehen eines Rechts auf Berichtigung oder Löschung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} oder auf
-     \hyperref[itm:04-3]{Einschränkung der Verarbeitung} durch den Verantwortlichen oder eines Widerspruchsrechts gegen diese \hyperref[itm:04-2]{Verarbeitung};
+     \hyperref[itm:04-3]{Einschränkung der Verarbeitung} durch den \hyperref[itm:04-7]{Verantwortlichen} oder eines Widerspruchsrechts gegen diese \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:15-1e}
 
     \item das Bestehen eines Beschwerderechts bei einer \hyperref[itm:04-21]{Aufsichtsbehörde};
@@ -52,8 +52,8 @@
    Übermittlung unterrichtet zu werden.
   \label{itm:15-2}
 
-  \item Der Verantwortliche stellt eine Kopie der \hyperref[itm:04-1]{personenbezogenen Daten}, die Gegenstand der \hyperref[itm:04-2]{Verarbeitung} sind, zur
-   Verfügung. Für alle weiteren Kopien, die die \hyperref[itm:04-1]{betroffene Person} beantragt, kann der Verantwortliche ein angemessenes
+  \item Der \hyperref[itm:04-7]{Verantwortliche} stellt eine Kopie der \hyperref[itm:04-1]{personenbezogenen Daten}, die Gegenstand der \hyperref[itm:04-2]{Verarbeitung} sind, zur
+   Verfügung. Für alle weiteren Kopien, die die \hyperref[itm:04-1]{betroffene Person} beantragt, kann der \hyperref[itm:04-7]{Verantwortliche} ein angemessenes
    Entgelt auf der Grundlage der Verwaltungskosten verlangen. Stellt die \hyperref[itm:04-1]{betroffene Person} den Antrag elektronisch, so
    sind die Informationen in einem gängigen elektronischen Format zur Verfügung zu stellen, sofern sie nichts anderes
    angibt.
