--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -6,8 +6,8 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem Verantwortlichen zu verlangen, dass sie betreffende
-   \hyperref[itm:04-1]{personenbezogene Daten} unverzüglich gelöscht werden, und der Verantwortliche ist verpflichtet, personenbezogene
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} zu verlangen, dass sie betreffende
+   \hyperref[itm:04-1]{personenbezogene Daten} unverzüglich gelöscht werden, und der \hyperref[itm:04-7]{Verantwortliche} ist verpflichtet, personenbezogene
    Daten unverzüglich zu löschen, sofern einer der folgenden Gründe zutrifft:
   \label{itm:17-1}
 
@@ -31,7 +31,7 @@
     \label{itm:17-1d}
 
     \item Die Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ist zur Erfüllung einer rechtlichen Verpflichtung nach dem
-     Unionsrecht oder dem Recht der Mitgliedstaaten erforderlich, dem der Verantwortliche unterliegt.
+     Unionsrecht oder dem Recht der Mitgliedstaaten erforderlich, dem der \hyperref[itm:04-7]{Verantwortliche} unterliegt.
     \label{itm:17-1e}
 
     \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden in Bezug auf angebotene \hyperref[itm:04-28]{Dienste der Informationsgesellschaft} gemäß
@@ -40,9 +40,9 @@
 
   \end{enumerate}
 
-  \item Hat der Verantwortliche die \hyperref[itm:04-1]{personenbezogenen Daten} öffentlich gemacht und ist er gemäß \hyperref[itm:17-1]
+  \item Hat der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{personenbezogenen Daten} öffentlich gemacht und ist er gemäß \hyperref[itm:17-1]
    {Absatz 1} zu deren Löschung verpflichtet, so trifft er unter Berücksichtigung der verfügbaren Technologie und der
-   Implementierungskosten angemessene Maßnahmen, auch technischer Art, um für die Datenverarbeitung Verantwortliche,
+   Implementierungskosten angemessene Maßnahmen, auch technischer Art, um für die Datenverarbeitung \hyperref[itm:04-7]{Verantwortliche},
    die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeiten, darüber zu informieren, dass eine \hyperref[itm:04-1]{betroffene Person} von ihnen die
    Löschung aller Links zu diesen \hyperref[itm:04-1]{personenbezogenen Daten} oder von Kopien oder Replikationen dieser personenbezogenen
    Daten verlangt hat.
@@ -58,8 +58,8 @@
     \label{itm:17-3a}
 
     \item zur Erfüllung einer rechtlichen Verpflichtung, die die \hyperref[itm:04-2]{Verarbeitung} nach dem Recht der Union oder der
-     Mitgliedstaaten, dem der Verantwortliche unterliegt, erfordert, oder zur Wahrnehmung einer Aufgabe, die im
-     öffentlichen Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem Verantwortlichen übertragen
+     Mitgliedstaaten, dem der \hyperref[itm:04-7]{Verantwortliche} unterliegt, erfordert, oder zur Wahrnehmung einer Aufgabe, die im
+     öffentlichen Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]{Verantwortlichen} übertragen
      wurde;
     \label{itm:17-3b}
 
