--- a/artikel/20.tex
+++ b/artikel/20.tex
@@ -7,8 +7,8 @@
 \begin{enumerate}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, die sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}, die sie einem
-   Verantwortlichen bereitgestellt hat, in einem strukturierten, gängigen und maschinenlesbaren Format zu erhalten, und
-   sie hat das Recht, diese Daten einem anderen Verantwortlichen ohne Behinderung durch den Verantwortlichen, dem die
+   \hyperref[itm:04-7]{Verantwortlichen} bereitgestellt hat, in einem strukturierten, gängigen und maschinenlesbaren Format zu erhalten, und
+   sie hat das Recht, diese Daten einem anderen \hyperref[itm:04-7]{Verantwortlichen} ohne Behinderung durch den \hyperref[itm:04-7]{Verantwortlichen}, dem die
    \hyperref[itm:04-1]{personenbezogenen Daten} bereitgestellt wurden, zu übermitteln, sofern
   \label{itm:20-1}
 
@@ -25,14 +25,14 @@
   \end{enumerate}
 
   \item Bei der Ausübung ihres Rechts auf Datenübertragbarkeit gemäß \hyperref[itm:20-1]{Absatz 1} hat die \hyperref[itm:04-1]{betroffene
-   Person} das Recht, zu erwirken, dass die \hyperref[itm:04-1]{personenbezogenen Daten} direkt von einem Verantwortlichen einem anderen
-   Verantwortlichen übermittelt werden, soweit dies technisch machbar ist.
+   Person} das Recht, zu erwirken, dass die \hyperref[itm:04-1]{personenbezogenen Daten} direkt von einem \hyperref[itm:04-7]{Verantwortlichen} einem anderen
+   \hyperref[itm:04-7]{Verantwortlichen} übermittelt werden, soweit dies technisch machbar ist.
   \label{itm:20-2}
 
   \item Die Ausübung des Rechts nach \hyperref[itm:20-1]{Absatz 1} des vorliegenden Artikels lässt \hyperref[ch:17]
    {Artikel 17} unberührt. Dieses Recht gilt nicht für eine \hyperref[itm:04-2]{Verarbeitung}, die für die Wahrnehmung einer Aufgabe
    erforderlich ist, die im öffentlichen Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem
-   Verantwortlichen übertragen wurde.
+   \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde.
   \label{itm:20-3}
 
   \item Das Recht gemäß \hyperref[itm:20-2]{Absatz 2} darf die Rechte und Freiheiten anderer Personen nicht
