--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -9,7 +9,7 @@
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, jederzeit
    gegen die \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]{personenbezogener Daten}, die aufgrund von \hyperref[itm:06-1]{Artikel 6
    Absatz 1} Buchstaben \hyperref[itm:06-1e]{e} oder \hyperref[itm:06-1f]{f} erfolgt, Widerspruch einzulegen; dies gilt
-   auch für ein auf diese Bestimmungen gestütztes \hyperref[itm:04-4]{Profiling}. Der Verantwortliche verarbeitet die personenbezogenen
+   auch für ein auf diese Bestimmungen gestütztes \hyperref[itm:04-4]{Profiling}. Der \hyperref[itm:04-7]{Verantwortliche} verarbeitet die personenbezogenen
    Daten nicht mehr, es sei denn, er kann zwingende schutzwürdige Gründe für die \hyperref[itm:04-2]{Verarbeitung} nachweisen, die die
    Interessen, Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} überwiegen, oder die \hyperref[itm:04-2]{Verarbeitung} dient der Geltendmachung,
    Ausübung oder Verteidigung von Rechtsansprüchen.
