--- a/artikel/22.tex
+++ b/artikel/22.tex
@@ -16,11 +16,11 @@
 
   \begin{enumerate}
   
-    \item für den Abschluss oder die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und dem Verantwortlichen
+    \item für den Abschluss oder die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und dem \hyperref[itm:04-7]{Verantwortlichen}
      erforderlich ist,
     \label{itm:22-2a}
 
-    \item aufgrund von Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der Verantwortliche unterliegt,
+    \item aufgrund von Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der \hyperref[itm:04-7]{Verantwortliche} unterliegt,
      zulässig ist und diese Rechtsvorschriften angemessene Maßnahmen zur Wahrung der Rechte und Freiheiten sowie der
      berechtigten Interessen der \hyperref[itm:04-1]{betroffenen Person} enthalten oder
     \label{itm:22-2b}
@@ -31,9 +31,9 @@
   \end{enumerate}
 
   \item In den in \hyperref[itm:22-2]{Absatz 2} Buchstaben \hyperref[itm:22-2a]{a} und \hyperref[itm:22-2c]{c} genannten
-   Fällen trifft der Verantwortliche angemessene Maßnahmen, um die Rechte und Freiheiten sowie die berechtigten
+   Fällen trifft der \hyperref[itm:04-7]{Verantwortliche} angemessene Maßnahmen, um die Rechte und Freiheiten sowie die berechtigten
    Interessen der \hyperref[itm:04-1]{betroffenen Person} zu wahren, wozu mindestens das Recht auf Erwirkung des Eingreifens einer Person
-   seitens des Verantwortlichen, auf Darlegung des eigenen Standpunkts und auf Anfechtung der Entscheidung gehört.
+   seitens des \hyperref[itm:04-7]{Verantwortlichen}, auf Darlegung des eigenen Standpunkts und auf Anfechtung der Entscheidung gehört.
   \label{itm:22-3}
 
   \item Entscheidungen nach \hyperref[itm:22-2]{Absatz 2} dürfen nicht auf besonderen Kategorien \hyperref[itm:04-1]{personenbezogener Daten}
