--- a/artikel/23.tex
+++ b/artikel/23.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der Verantwortliche oder der
+  \item Durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der \hyperref[itm:04-7]{Verantwortliche} oder der
    Auftragsverarbeiter unterliegt, können die Pflichten und Rechte gemäß den Artikeln \hyperref[ch:12]
    {12} bis \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34} sowie \hyperref[ch:5]{Artikel 5}, insofern dessen
    Bestimmungen den in den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22} vorgesehenen Rechten und Pflichten
@@ -74,7 +74,7 @@
     \item die Garantien gegen Missbrauch oder unrechtmäßigen Zugang oder unrechtmäßige Übermittlung;
     \label{itm:23-2d}
 
-    \item die Angaben zu dem Verantwortlichen oder den Kategorien von Verantwortlichen,
+    \item die Angaben zu dem \hyperref[itm:04-7]{Verantwortlichen} oder den Kategorien von \hyperref[itm:04-7]{Verantwortlichen},
     \label{itm:23-2e}
 
     \item die jeweiligen Speicherfristen sowie die geltenden Garantien unter Berücksichtigung von Art, Umfang und
