--- a/artikel/24.tex
+++ b/artikel/24.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Der Verantwortliche setzt unter Berücksichtigung der Art, des Umfangs, der Umstände und der Zwecke der
+  \item Der \hyperref[itm:04-7]{Verantwortliche} setzt unter Berücksichtigung der Art, des Umfangs, der Umstände und der Zwecke der
    \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere der Risiken für die Rechte und
    Freiheiten natürlicher Personen geeignete technische und organisatorische Maßnahmen um, um sicherzustellen und den
    Nachweis dafür erbringen zu können, dass die \hyperref[itm:04-2]{Verarbeitung} gemäß dieser Verordnung erfolgt. Diese Maßnahmen werden
@@ -14,12 +14,12 @@
   \label{itm:24-1}
 
   \item Sofern dies in einem angemessenen Verhältnis zu den Verarbeitungstätigkeiten steht, müssen die Maßnahmen gemäß
-   \hyperref[itm:24-1]{Absatz 1} die Anwendung geeigneter Datenschutzvorkehrungen durch den Verantwortlichen umfassen.
+   \hyperref[itm:24-1]{Absatz 1} die Anwendung geeigneter Datenschutzvorkehrungen durch den \hyperref[itm:04-7]{Verantwortlichen} umfassen.
   \label{itm:24-2}
 
   \item Die Einhaltung der genehmigten Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} oder eines genehmigten
    Zertifizierungsverfahrens gemäß \hyperref[ch:42]{Artikel 42} kann als Gesichtspunkt herangezogen werden, um die
-   Erfüllung der Pflichten des Verantwortlichen nachzuweisen.
+   Erfüllung der Pflichten des \hyperref[itm:04-7]{Verantwortlichen} nachzuweisen.
   \label{itm:24-3}
 
 \end{enumerate}
