--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item In den Fällen gemäß \hyperref[itm:03-2]{Artikel 3 Absatz 2} benennt der Verantwortliche oder der
+  \item In den Fällen gemäß \hyperref[itm:03-2]{Artikel 3 Absatz 2} benennt der \hyperref[itm:04-7]{Verantwortliche} oder der
    Auftragsverarbeiter schriftlich einen Vertreter in der Union.
   \label{itm:27-1}
 
@@ -32,13 +32,13 @@
    deren Verhalten beobachtet wird, sich befinden.
   \label{itm:27-3}
 
-  \item Der Vertreter wird durch den Verantwortlichen oder den Auftragsverarbeiter beauftragt, zusätzlich zu diesem oder
+  \item Der Vertreter wird durch den \hyperref[itm:04-7]{Verantwortlichen} oder den Auftragsverarbeiter beauftragt, zusätzlich zu diesem oder
    an seiner Stelle insbesondere für \hyperref[itm:04-21]{Aufsichtsbehörden} und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
    mit der \hyperref[itm:04-2]{Verarbeitung} zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu dienen.
   \label{itm:27-4}
 
-  \item Die Benennung eines Vertreters durch den Verantwortlichen oder den Auftragsverarbeiter erfolgt unbeschadet
-   etwaiger rechtlicher Schritte gegen den Verantwortlichen oder den Auftragsverarbeiter selbst.
+  \item Die Benennung eines Vertreters durch den \hyperref[itm:04-7]{Verantwortlichen} oder den Auftragsverarbeiter erfolgt unbeschadet
+   etwaiger rechtlicher Schritte gegen den \hyperref[itm:04-7]{Verantwortlichen} oder den Auftragsverarbeiter selbst.
   \label{itm:27-5}
 
 \end{enumerate}
