--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -6,33 +6,33 @@
 
 \begin{enumerate}
 
-  \item Erfolgt eine \hyperref[itm:04-2]{Verarbeitung} im Auftrag eines Verantwortlichen, so arbeitet dieser nur mit Auftragsverarbeitern,
+  \item Erfolgt eine \hyperref[itm:04-2]{Verarbeitung} im Auftrag eines \hyperref[itm:04-7]{Verantwortlichen}, so arbeitet dieser nur mit Auftragsverarbeitern,
    die hinreichend Garantien dafür bieten, dass geeignete technische und organisatorische Maßnahmen so durchgeführt
    werden, dass die \hyperref[itm:04-2]{Verarbeitung} im Einklang mit den Anforderungen dieser Verordnung erfolgt und den Schutz der Rechte
    der \hyperref[itm:04-1]{betroffenen Person} gewährleistet.
   \label{itm:28-1}
 
   \item Der Auftragsverarbeiter nimmt keinen weiteren Auftragsverarbeiter ohne vorherige gesonderte oder allgemeine
-   schriftliche Genehmigung des Verantwortlichen in Anspruch. Im Fall einer allgemeinen schriftlichen Genehmigung
-   informiert der Auftragsverarbeiter den Verantwortlichen immer über jede beabsichtigte Änderung in Bezug auf die
-   Hinzuziehung oder die Ersetzung anderer Auftragsverarbeiter, wodurch der Verantwortliche die Möglichkeit erhält,
+   schriftliche Genehmigung des \hyperref[itm:04-7]{Verantwortlichen} in Anspruch. Im Fall einer allgemeinen schriftlichen Genehmigung
+   informiert der Auftragsverarbeiter den \hyperref[itm:04-7]{Verantwortlichen} immer über jede beabsichtigte Änderung in Bezug auf die
+   Hinzuziehung oder die Ersetzung anderer Auftragsverarbeiter, wodurch der \hyperref[itm:04-7]{Verantwortliche} die Möglichkeit erhält,
    gegen derartige Änderungen Einspruch zu erheben.
   \label{itm:28-2}
 
   \item Die \hyperref[itm:04-2]{Verarbeitung} durch einen Auftragsverarbeiter erfolgt auf der Grundlage eines Vertrags oder eines anderen
    Rechtsinstruments nach dem Unionsrecht oder dem Recht der Mitgliedstaaten, der bzw. das den Auftragsverarbeiter in
-   Bezug auf den Verantwortlichen bindet und in dem Gegenstand und Dauer der \hyperref[itm:04-2]{Verarbeitung}, Art und Zweck der
+   Bezug auf den \hyperref[itm:04-7]{Verantwortlichen} bindet und in dem Gegenstand und Dauer der \hyperref[itm:04-2]{Verarbeitung}, Art und Zweck der
    \hyperref[itm:04-2]{Verarbeitung}, die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, die Kategorien \hyperref[itm:04-1]{betroffener Personen} und die Pflichten und Rechte
-   des Verantwortlichen festgelegt sind. Dieser Vertrag bzw. dieses andere Rechtsinstrument sieht insbesondere vor,
+   des \hyperref[itm:04-7]{Verantwortlichen} festgelegt sind. Dieser Vertrag bzw. dieses andere Rechtsinstrument sieht insbesondere vor,
    dass der Auftragsverarbeiter
   \label{itm:28-3-1}
 
   \begin{enumerate}
   
-    \item die \hyperref[itm:04-1]{personenbezogenen Daten} nur auf dokumentierte Weisung des Verantwortlichen -- auch in Bezug auf die
+    \item die \hyperref[itm:04-1]{personenbezogenen Daten} nur auf dokumentierte Weisung des \hyperref[itm:04-7]{Verantwortlichen} -- auch in Bezug auf die
      Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} -- verarbeitet, sofern
      er nicht durch das Recht der Union oder der Mitgliedstaaten, dem der Auftragsverarbeiter unterliegt, hierzu
-     verpflichtet ist; in einem solchen Fall teilt der Auftragsverarbeiter dem Verantwortlichen diese rechtlichen
+     verpflichtet ist; in einem solchen Fall teilt der Auftragsverarbeiter dem \hyperref[itm:04-7]{Verantwortlichen} diese rechtlichen
      Anforderungen vor der \hyperref[itm:04-2]{Verarbeitung} mit, sofern das betreffende Recht eine solche Mitteilung nicht wegen eines
      wichtigen öffentlichen Interesses verbietet;
     \label{itm:28-3-1a}
@@ -48,24 +48,24 @@
      Inanspruchnahme der Dienste eines weiteren Auftragsverarbeiters einhält;
     \label{itm:28-3-1d}
 
-    \item angesichts der Art der \hyperref[itm:04-2]{Verarbeitung} den Verantwortlichen nach Möglichkeit mit geeigneten technischen und
+    \item angesichts der Art der \hyperref[itm:04-2]{Verarbeitung} den \hyperref[itm:04-7]{Verantwortlichen} nach Möglichkeit mit geeigneten technischen und
      organisatorischen Maßnahmen dabei unterstützt, seiner Pflicht zur Beantwortung von Anträgen auf Wahrnehmung der in
      \hyperref[part:3]{Kapitel III} genannten Rechte der \hyperref[itm:04-1]{betroffenen Person} nachzukommen;
     \label{itm:28-3-1e}
 
     \item unter Berücksichtigung der Art der \hyperref[itm:04-2]{Verarbeitung} und der ihm zur Verfügung stehenden Informationen den
-     Verantwortlichen bei der Einhaltung der in den Artikeln \hyperref[ch:32]{32} bis \hyperref[ch:36]{36} genannten
+     \hyperref[itm:04-7]{Verantwortlichen} bei der Einhaltung der in den Artikeln \hyperref[ch:32]{32} bis \hyperref[ch:36]{36} genannten
      Pflichten unterstützt;
     \label{itm:28-3-1f}
 
     \item nach Abschluss der Erbringung der Verarbeitungsleistungen alle \hyperref[itm:04-1]{personenbezogenen Daten} nach Wahl des
-     Verantwortlichen entweder löscht oder zurückgibt, sofern nicht nach dem Unionsrecht oder dem Recht der
+     \hyperref[itm:04-7]{Verantwortlichen} entweder löscht oder zurückgibt, sofern nicht nach dem Unionsrecht oder dem Recht der
      Mitgliedstaaten eine Verpflichtung zur Speicherung der \hyperref[itm:04-1]{personenbezogenen Daten} besteht;
     \label{itm:28-3-1g}
 
-    \item dem Verantwortlichen alle erforderlichen Informationen zum Nachweis der Einhaltung der in diesem Artikel
+    \item dem \hyperref[itm:04-7]{Verantwortlichen} alle erforderlichen Informationen zum Nachweis der Einhaltung der in diesem Artikel
      niedergelegten Pflichten zur Verfügung stellt und Überprüfungen -- einschließlich Inspektionen –, die vom
-     Verantwortlichen oder einem anderen von diesem beauftragten Prüfer durchgeführt werden, ermöglicht und dazu
+     \hyperref[itm:04-7]{Verantwortlichen} oder einem anderen von diesem beauftragten Prüfer durchgeführt werden, ermöglicht und dazu
      beiträgt.
     \label{itm:28-3-1h}
 
@@ -73,20 +73,20 @@
 
   \phantomsection
   Mit Blick auf \hyperref[itm:28-3-1h]{Unterabsatz 1 Buchstabe h} informiert der Auftragsverarbeiter den
-  Verantwortlichen
+  \hyperref[itm:04-7]{Verantwortlichen}
   unverzüglich, falls er der Auffassung ist, dass eine Weisung gegen diese Verordnung oder gegen andere
   Datenschutzbestimmungen der Union oder der Mitgliedstaaten verstößt.
   \label{itm:28-3-2}
 
   \item Nimmt der Auftragsverarbeiter die Dienste eines weiteren Auftragsverarbeiters in Anspruch, um bestimmte
-   Verarbeitungstätigkeiten im Namen des Verantwortlichen auszuführen, so werden diesem weiteren Auftragsverarbeiter im
+   Verarbeitungstätigkeiten im Namen des \hyperref[itm:04-7]{Verantwortlichen} auszuführen, so werden diesem weiteren Auftragsverarbeiter im
    Wege eines Vertrags oder eines anderen Rechtsinstruments nach dem Unionsrecht oder dem Recht des betreffenden
    Mitgliedstaats dieselben Datenschutzpflichten auferlegt, die in dem Vertrag oder anderen Rechtsinstrument zwischen
-   dem Verantwortlichen und dem Auftragsverarbeiter gemäß \hyperref[itm:28-3-1]{Absatz 3} festgelegt sind, wobei
+   dem \hyperref[itm:04-7]{Verantwortlichen} und dem Auftragsverarbeiter gemäß \hyperref[itm:28-3-1]{Absatz 3} festgelegt sind, wobei
    insbesondere hinreichende Garantien dafür geboten werden muss, dass die geeigneten technischen und organisatorischen
    Maßnahmen so durchgeführt werden, dass die \hyperref[itm:04-2]{Verarbeitung} entsprechend den Anforderungen dieser Verordnung erfolgt.
    Kommt der weitere Auftragsverarbeiter seinen Datenschutzpflichten nicht nach, so haftet der erste
-   Auftragsverarbeiter gegenüber dem Verantwortlichen für die Einhaltung der Pflichten jenes anderen
+   Auftragsverarbeiter gegenüber dem \hyperref[itm:04-7]{Verantwortlichen} für die Einhaltung der Pflichten jenes anderen
    Auftragsverarbeiters.
   \label{itm:28-4}
 
@@ -96,11 +96,11 @@
    {4} des vorliegenden Artikels nachzuweisen.
   \label{itm:28-5}
 
-  \item Unbeschadet eines individuellen Vertrags zwischen dem Verantwortlichen und dem Auftragsverarbeiter kann der
+  \item Unbeschadet eines individuellen Vertrags zwischen dem \hyperref[itm:04-7]{Verantwortlichen} und dem Auftragsverarbeiter kann der
    Vertrag oder das andere Rechtsinstrument im Sinne der Absätze \hyperref[itm:28-3-1]{3} und \hyperref[itm:28-4]{4} des
    vorliegenden Artikels ganz oder teilweise auf den in den Absätzen \hyperref[itm:28-7]{7} und \hyperref[itm:28-8]
    {8} des vorliegenden Artikels genannten Standardvertragsklauseln beruhen, auch wenn diese Bestandteil einer dem
-   Verantwortlichen oder dem Auftragsverarbeiter gemäß den Artikeln \hyperref[ch:42]{42} und \hyperref[ch:43]{43}
+   \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter gemäß den Artikeln \hyperref[ch:42]{42} und \hyperref[ch:43]{43}
    erteilten Zertifizierung sind.
   \label{itm:28-6}
 
@@ -121,7 +121,7 @@
 
   \item Unbeschadet der Artikel \hyperref[ch:82]{82}, \hyperref[ch:83]{83} und \hyperref[ch:84]{84} gilt ein
    Auftragsverarbeiter, der unter Verstoß gegen diese Verordnung die Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung} bestimmt, in
-   Bezug auf diese \hyperref[itm:04-2]{Verarbeitung} als Verantwortlicher.
+   Bezug auf diese \hyperref[itm:04-2]{Verarbeitung} als \hyperref[itm:04-7]{Verantwortlicher}.
   \label{itm:28-10}
 
 \end{enumerate}
