--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -6,14 +6,14 @@
 
 \begin{enumerate}
 
-  \item Jeder Verantwortliche und gegebenenfalls sein Vertreter führen ein Verzeichnis aller Verarbeitungstätigkeiten,
+  \item Jeder \hyperref[itm:04-7]{Verantwortliche} und gegebenenfalls sein Vertreter führen ein Verzeichnis aller Verarbeitungstätigkeiten,
    die ihrer Zuständigkeit unterliegen. Dieses Verzeichnis enthält sämtliche folgenden Angaben:
   \label{itm:30-1}
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des Verantwortlichen und gegebenenfalls des gemeinsam mit ihm Verantwortlichen,
-     des Vertreters des Verantwortlichen sowie eines etwaigen Datenschutzbeauftragten;
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} und gegebenenfalls des gemeinsam mit ihm \hyperref[itm:04-7]{Verantwortlichen},
+     des Vertreters des \hyperref[itm:04-7]{Verantwortlichen} sowie eines etwaigen Datenschutzbeauftragten;
     \label{itm:30-1a}
 
     \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung};
@@ -42,17 +42,17 @@
   \end{enumerate}
 
   \item Jeder Auftragsverarbeiter und gegebenenfalls sein Vertreter führen ein Verzeichnis zu allen Kategorien von im
-   Auftrag eines Verantwortlichen durchgeführten Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, die Folgendes enthält:
+   Auftrag eines \hyperref[itm:04-7]{Verantwortlichen} durchgeführten Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, die Folgendes enthält:
   \label{itm:30-2}
 
   \begin{enumerate}
   
     \item den Namen und die Kontaktdaten des Auftragsverarbeiters oder der Auftragsverarbeiter und jedes
-     Verantwortlichen, in dessen Auftrag der Auftragsverarbeiter tätig ist, sowie gegebenenfalls des Vertreters des
-     Verantwortlichen oder des Auftragsverarbeiters und eines etwaigen Datenschutzbeauftragten;
+     \hyperref[itm:04-7]{Verantwortlichen}, in dessen Auftrag der Auftragsverarbeiter tätig ist, sowie gegebenenfalls des Vertreters des
+     \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters und eines etwaigen Datenschutzbeauftragten;
     \label{itm:30-2a}
 
-    \item die Kategorien von \hyperref[itm:04-2]{Verarbeitungen}, die im Auftrag jedes Verantwortlichen durchgeführt werden;
+    \item die Kategorien von \hyperref[itm:04-2]{Verarbeitungen}, die im Auftrag jedes \hyperref[itm:04-7]{Verantwortlichen} durchgeführt werden;
     \label{itm:30-2b}
 
     \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale
@@ -71,7 +71,7 @@
    führen, was auch in einem elektronischen Format erfolgen kann.
   \label{itm:30-3}
 
-  \item Der Verantwortliche oder der Auftragsverarbeiter sowie gegebenenfalls der Vertreter des Verantwortlichen oder
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter sowie gegebenenfalls der Vertreter des \hyperref[itm:04-7]{Verantwortlichen} oder
    des Auftragsverarbeiters stellen der \hyperref[itm:04-21]{Aufsichtsbehörde} das Verzeichnis auf Anfrage zur Verfügung.
   \label{itm:30-4}
 
