--- a/artikel/32.tex
+++ b/artikel/32.tex
@@ -8,7 +8,7 @@
 
   \item Unter Berücksichtigung des Stands der Technik, der Implementierungskosten und der Art, des Umfangs, der Umstände
    und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere des Risikos für
-   die Rechte und Freiheiten natürlicher Personen treffen der Verantwortliche und der Auftragsverarbeiter geeignete
+   die Rechte und Freiheiten natürlicher Personen treffen der \hyperref[itm:04-7]{Verantwortliche} und der Auftragsverarbeiter geeignete
    technische und organisatorische Maßnahmen, um ein dem Risiko angemessenes Schutzniveau zu gewährleisten; diese
    Maßnahmen schließen unter anderem Folgendes ein:
   \label{itm:32-1}
@@ -43,9 +43,9 @@
    der in \hyperref[itm:32-1]{Absatz 1} des vorliegenden Artikels genannten Anforderungen nachzuweisen.
   \label{itm:32-3}
 
-  \item Der Verantwortliche und der Auftragsverarbeiter unternehmen Schritte, um sicherzustellen, dass ihnen
+  \item Der \hyperref[itm:04-7]{Verantwortliche} und der Auftragsverarbeiter unternehmen Schritte, um sicherzustellen, dass ihnen
    unterstellte natürliche Personen, die Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} haben, diese nur auf Anweisung des
-   Verantwortlichen verarbeiten, es sei denn, sie sind nach dem Recht der Union oder der Mitgliedstaaten zur
+   \hyperref[itm:04-7]{Verantwortlichen} verarbeiten, es sei denn, sie sind nach dem Recht der Union oder der Mitgliedstaaten zur
    \hyperref[itm:04-2]{Verarbeitung} verpflichtet.
   \label{itm:32-4}
 
