--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -8,12 +8,12 @@
 
   \item Hat eine Form der \hyperref[itm:04-2]{Verarbeitung}, insbesondere bei Verwendung neuer Technologien, aufgrund der Art, des Umfangs,
    der Umstände und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} voraussichtlich ein hohes Risiko für die Rechte und Freiheiten
-   natürlicher Personen zur Folge, so führt der Verantwortliche vorab eine Abschätzung der Folgen der vorgesehenen
+   natürlicher Personen zur Folge, so führt der \hyperref[itm:04-7]{Verantwortliche} vorab eine Abschätzung der Folgen der vorgesehenen
    Verarbeitungsvorgänge für den Schutz \hyperref[itm:04-1]{personenbezogener Daten} durch. Für die Untersuchung mehrerer ähnlicher
    Verarbeitungsvorgänge mit ähnlich hohen Risiken kann eine einzige Abschätzung vorgenommen werden.
   \label{itm:35-1}
 
-  \item Der Verantwortliche holt bei der Durchführung einer Datenschutz-Folgenabschätzung den Rat des
+  \item Der \hyperref[itm:04-7]{Verantwortliche} holt bei der Durchführung einer Datenschutz-Folgenabschätzung den Rat des
    Datenschutzbeauftragten, sofern ein solcher benannt wurde, ein.
   \label{itm:35-2}
 
@@ -61,7 +61,7 @@
   \begin{enumerate}
   
     \item eine systematische Beschreibung der geplanten Verarbeitungsvorgänge und der Zwecke der \hyperref[itm:04-2]{Verarbeitung},
-     gegebenenfalls einschließlich der von dem Verantwortlichen verfolgten berechtigten Interessen;
+     gegebenenfalls einschließlich der von dem \hyperref[itm:04-7]{Verantwortlichen} verfolgten berechtigten Interessen;
     \label{itm:35-7a}
 
     \item eine Bewertung der Notwendigkeit und Verhältnismäßigkeit der Verarbeitungsvorgänge in Bezug auf den Zweck;
@@ -80,26 +80,26 @@
   \end{enumerate}
 
   \item Die Einhaltung genehmigter Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} durch die zuständigen
-   Verantwortlichen oder die zuständigen Auftragsverarbeiter ist bei der Beurteilung der Auswirkungen der von diesen
+   \hyperref[itm:04-7]{Verantwortlichen} oder die zuständigen Auftragsverarbeiter ist bei der Beurteilung der Auswirkungen der von diesen
    durchgeführten Verarbeitungsvorgänge, insbesondere für die Zwecke einer Datenschutz-Folgenabschätzung, gebührend zu
    berücksichtigen.
   \label{itm:35-8}
 
-  \item Der Verantwortliche holt gegebenenfalls den Standpunkt der \hyperref[itm:04-1]{betroffenen Personen} oder ihrer Vertreter zu der
+  \item Der \hyperref[itm:04-7]{Verantwortliche} holt gegebenenfalls den Standpunkt der \hyperref[itm:04-1]{betroffenen Personen} oder ihrer Vertreter zu der
    beabsichtigten \hyperref[itm:04-2]{Verarbeitung} unbeschadet des Schutzes gewerblicher oder öffentlicher Interessen oder der Sicherheit
    der Verarbeitungsvorgänge ein.
   \label{itm:35-9}
 
   \item Falls die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:06-1]{Artikel 6 Absatz 1} Buchstabe \hyperref[itm:06-1c]
    {c} oder \hyperref[itm:06-1e]{e} auf einer Rechtsgrundlage im Unionsrecht oder im Recht des Mitgliedstaats, dem der
-   Verantwortliche unterliegt, beruht und falls diese Rechtsvorschriften den konkreten Verarbeitungsvorgang oder die
+   \hyperref[itm:04-7]{Verantwortliche} unterliegt, beruht und falls diese Rechtsvorschriften den konkreten Verarbeitungsvorgang oder die
    konkreten Verarbeitungsvorgänge regeln und bereits im Rahmen der allgemeinen Folgenabschätzung im Zusammenhang mit
    dem Erlass dieser Rechtsgrundlage eine Datenschutz-Folgenabschätzung erfolgte, gelten die Absätze \hyperref
    [itm:35-1]{1} bis \hyperref[itm:35-7]{7} nur, wenn es nach dem Ermessen der Mitgliedstaaten erforderlich ist, vor
    den betreffenden Verarbeitungstätigkeiten eine solche Folgenabschätzung durchzuführen.
   \label{itm:35-10}
 
-  \item Erforderlichenfalls führt der Verantwortliche eine Überprüfung durch, um zu bewerten, ob die \hyperref[itm:04-2]{Verarbeitung} gemäß
+  \item Erforderlichenfalls führt der \hyperref[itm:04-7]{Verantwortliche} eine Überprüfung durch, um zu bewerten, ob die \hyperref[itm:04-2]{Verarbeitung} gemäß
    der Datenschutz-Folgenabschätzung durchgeführt wird; dies gilt zumindest, wenn hinsichtlich des mit den
    Verarbeitungsvorgängen verbundenen Risikos Änderungen eingetreten sind.
   \label{itm:35-11}
