--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -6,30 +6,30 @@
 
 \begin{enumerate}
 
-  \item Der Verantwortliche konsultiert vor der \hyperref[itm:04-2]{Verarbeitung} die \hyperref[itm:04-21]{Aufsichtsbehörde}, wenn aus einer
+  \item Der \hyperref[itm:04-7]{Verantwortliche} konsultiert vor der \hyperref[itm:04-2]{Verarbeitung} die \hyperref[itm:04-21]{Aufsichtsbehörde}, wenn aus einer
    Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} hervorgeht, dass die \hyperref[itm:04-2]{Verarbeitung} ein hohes Risiko
-   zur Folge hätte, sofern der Verantwortliche keine Maßnahmen zur Eindämmung des Risikos trifft.
+   zur Folge hätte, sofern der \hyperref[itm:04-7]{Verantwortliche} keine Maßnahmen zur Eindämmung des Risikos trifft.
   \label{itm:36-1}
 
   \item Falls die \hyperref[itm:04-21]{Aufsichtsbehörde} der Auffassung ist, dass die geplante \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:36-1]
-   {Absatz 1} nicht im Einklang mit dieser Verordnung stünde, insbesondere weil der Verantwortliche das Risiko nicht
-   ausreichend ermittelt oder nicht ausreichend eingedämmt hat, unterbreitet sie dem Verantwortlichen und
+   {Absatz 1} nicht im Einklang mit dieser Verordnung stünde, insbesondere weil der \hyperref[itm:04-7]{Verantwortliche} das Risiko nicht
+   ausreichend ermittelt oder nicht ausreichend eingedämmt hat, unterbreitet sie dem \hyperref[itm:04-7]{Verantwortlichen} und
    gegebenenfalls dem Auftragsverarbeiter innerhalb eines Zeitraums von bis zu acht Wochen nach Erhalt des Ersuchens um
    Konsultation entsprechende schriftliche Empfehlungen und kann ihre in \hyperref[ch:58]{Artikel 58} genannten
    Befugnisse ausüben. Diese Frist kann unter Berücksichtigung der Komplexität der geplanten \hyperref[itm:04-2]{Verarbeitung} um sechs
-   Wochen verlängert werden. Die \hyperref[itm:04-21]{Aufsichtsbehörde} unterrichtet den Verantwortlichen oder gegebenenfalls den
+   Wochen verlängert werden. Die \hyperref[itm:04-21]{Aufsichtsbehörde} unterrichtet den \hyperref[itm:04-7]{Verantwortlichen} oder gegebenenfalls den
    Auftragsverarbeiter über eine solche Fristverlängerung innerhalb eines Monats nach Eingang des Antrags auf
    Konsultation zusammen mit den Gründen für die Verzögerung. Diese Fristen können ausgesetzt werden, bis die
    \hyperref[itm:04-21]{Aufsichtsbehörde} die für die Zwecke der Konsultation angeforderten Informationen erhalten hat.
   \label{itm:36-2}
 
-  \item Der Verantwortliche stellt der \hyperref[itm:04-21]{Aufsichtsbehörde} bei einer Konsultation gemäß \hyperref[itm:36-1]{Absatz 1}
+  \item Der \hyperref[itm:04-7]{Verantwortliche} stellt der \hyperref[itm:04-21]{Aufsichtsbehörde} bei einer Konsultation gemäß \hyperref[itm:36-1]{Absatz 1}
    folgende Informationen zur Verfügung:
   \label{itm:36-3}
 
   \begin{enumerate}
   
-    \item gegebenenfalls Angaben zu den jeweiligen Zuständigkeiten des Verantwortlichen, der gemeinsam Verantwortlichen
+    \item gegebenenfalls Angaben zu den jeweiligen Zuständigkeiten des \hyperref[itm:04-7]{Verantwortlichen}, der gemeinsam \hyperref[itm:04-7]{Verantwortlichen}
      und der an der \hyperref[itm:04-2]{Verarbeitung} beteiligten Auftragsverarbeiter, insbesondere bei einer \hyperref[itm:04-2]{Verarbeitung} innerhalb einer
      Gruppe von \hyperref[itm:04-18]{Unternehmen};
     \label{itm:36-3a}
@@ -57,7 +57,7 @@
    Regelungsmaßnahmen, die die \hyperref[itm:04-2]{Verarbeitung} betreffen.
   \label{itm:36-4}
 
-  \item Ungeachtet des \hyperref[itm:36-1]{Absatzes 1} können Verantwortliche durch das Recht der Mitgliedstaaten
+  \item Ungeachtet des \hyperref[itm:36-1]{Absatzes 1} können \hyperref[itm:04-7]{Verantwortliche} durch das Recht der Mitgliedstaaten
    verpflichtet werden, bei der \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe,
    einschließlich der \hyperref[itm:04-2]{Verarbeitung} zu Zwecken der sozialen Sicherheit und der öffentlichen Gesundheit, die
    \hyperref[itm:04-21]{Aufsichtsbehörde} zu konsultieren und deren vorherige Genehmigung einzuholen.
