--- a/artikel/44.tex
+++ b/artikel/44.tex
@@ -5,7 +5,7 @@
 \addsec{Text der Verordnung}
 
 Jedwede Übermittlung \hyperref[itm:04-1]{personenbezogener Daten}, die bereits verarbeitet werden oder nach ihrer Übermittlung an ein
-Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} verarbeitet werden sollen, ist nur zulässig, wenn der Verantwortliche
+Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} verarbeitet werden sollen, ist nur zulässig, wenn der \hyperref[itm:04-7]{Verantwortliche}
 und der Auftragsverarbeiter die in \hyperref[part:5]{diesem Kapitel} niedergelegten Bedingungen einhalten und auch die
 sonstigen Bestimmungen dieser Verordnung eingehalten werden; dies gilt auch für die etwaige Weiterübermittlung
 \hyperref[itm:04-1]{personenbezogener Daten} durch das betreffende Drittland oder die betreffende \hyperref[itm:04-29]{internationale Organisation} an ein anderes
