--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -19,12 +19,12 @@
      Angemessenheitsbeschlusses und ohne geeignete Garantien unterrichtet wurde,
     \label{itm:49-1-1a}
 
-    \item die Übermittlung ist für die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und dem Verantwortlichen
+    \item die Übermittlung ist für die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und dem \hyperref[itm:04-7]{Verantwortlichen}
      oder zur Durchführung von vorvertraglichen Maßnahmen auf Antrag der \hyperref[itm:04-1]{betroffenen Person} erforderlich,
     \label{itm:49-1-1b}
 
     \item die Übermittlung ist zum Abschluss oder zur Erfüllung eines im Interesse der \hyperref[itm:04-1]{betroffenen Person} von dem
-     Verantwortlichen mit einer anderen natürlichen oder juristischen Person geschlossenen Vertrags erforderlich,
+     \hyperref[itm:04-7]{Verantwortlichen} mit einer anderen natürlichen oder juristischen Person geschlossenen Vertrags erforderlich,
     \label{itm:49-1-1c}
 
     \item die Übermittlung ist aus wichtigen Gründen des öffentlichen Interesses notwendig,
@@ -52,10 +52,10 @@
   Ausnahmen für einen bestimmten Fall gemäß dem ersten Unterabsatz anwendbar ist, darf eine Übermittlung an ein
   Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur dann erfolgen, wenn die Übermittlung nicht wiederholt erfolgt,
   nur eine begrenzte Zahl von \hyperref[itm:04-1]{betroffenen Personen} betrifft, für die Wahrung der zwingenden berechtigten Interessen des
-  Verantwortlichen erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} nicht
-  überwiegen, und der Verantwortliche alle Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser
-  Beurteilung geeignete Garantien in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der Verantwortliche
-  setzt die \hyperref[itm:04-21]{Aufsichtsbehörde} von der Übermittlung in Kenntnis. Der Verantwortliche unterrichtet die \hyperref[itm:04-1]{betroffene Person}
+  \hyperref[itm:04-7]{Verantwortlichen} erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} nicht
+  überwiegen, und der \hyperref[itm:04-7]{Verantwortliche} alle Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser
+  Beurteilung geeignete Garantien in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der \hyperref[itm:04-7]{Verantwortliche}
+  setzt die \hyperref[itm:04-21]{Aufsichtsbehörde} von der Übermittlung in Kenntnis. Der \hyperref[itm:04-7]{Verantwortliche} unterrichtet die \hyperref[itm:04-1]{betroffene Person}
   über die Übermittlung und seine zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der \hyperref[itm:04-1]{betroffenen
   Person} nach den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.
   \label{itm:49-1-2}
@@ -72,7 +72,7 @@
   \label{itm:49-3}
 
   \item Das öffentliche Interesse im Sinne des \hyperref[itm:49-1-1d]{Absatzes 1 Unterabsatz 1 Buchstabe d} muss im
-   Unionsrecht oder im Recht des Mitgliedstaats, dem der Verantwortliche unterliegt, anerkannt sein.
+   Unionsrecht oder im Recht des Mitgliedstaats, dem der \hyperref[itm:04-7]{Verantwortliche} unterliegt, anerkannt sein.
   \label{itm:49-4}
 
   \item Liegt kein Angemessenheitsbeschluss vor, so können im Unionsrecht oder im Recht der Mitgliedstaaten aus
@@ -81,7 +81,7 @@
    teilen der Kommission derartige Bestimmungen mit.
   \label{itm:49-5}
 
-  \item Der Verantwortliche oder der Auftragsverarbeiter erfasst die von ihm vorgenommene Beurteilung sowie die
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter erfasst die von ihm vorgenommene Beurteilung sowie die
    angemessenen Garantien im Sinne des \hyperref[itm:49-1-2]{Absatzes 1 Unterabsatz 2 des vorliegenden Artikels} in der
    Dokumentation gemäß \hyperref[ch:30]{Artikel 30}.
   \label{itm:49-6}
