--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -11,7 +11,7 @@
 
   \begin{enumerate}
   
-    \item den Verantwortlichen, den Auftragsverarbeiter und gegebenenfalls den Vertreter des Verantwortlichen oder des
+    \item den \hyperref[itm:04-7]{Verantwortlichen}, den Auftragsverarbeiter und gegebenenfalls den Vertreter des \hyperref[itm:04-7]{Verantwortlichen} oder des
      Auftragsverarbeiters anzuweisen, alle Informationen bereitzustellen, die für die Erfüllung ihrer Aufgaben
      erforderlich sind,
     \label{itm:58-1a}
@@ -22,16 +22,16 @@
     \item eine Überprüfung der nach \hyperref[itm:42-7]{Artikel 42 Absatz 7} erteilten Zertifizierungen durchzuführen,
     \label{itm:58-1c}
 
-    \item den Verantwortlichen oder den Auftragsverarbeiter auf einen vermeintlichen Verstoß gegen diese Verordnung
+    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den Auftragsverarbeiter auf einen vermeintlichen Verstoß gegen diese Verordnung
      hinzuweisen,
     \label{itm:58-1d}
 
-    \item von dem Verantwortlichen und dem Auftragsverarbeiter Zugang zu allen \hyperref[itm:04-1]{personenbezogenen Daten} und
+    \item von dem \hyperref[itm:04-7]{Verantwortlichen} und dem Auftragsverarbeiter Zugang zu allen \hyperref[itm:04-1]{personenbezogenen Daten} und
      Informationen, die zur Erfüllung ihrer Aufgaben notwendig sind, zu erhalten,
     \label{itm:58-1e}
 
     \item gemäß dem Verfahrensrecht der Union oder dem Verfahrensrecht des Mitgliedstaats Zugang zu den Geschäftsräumen,
-     einschließlich aller Datenverarbeitungsanlagen und -geräte, des Verantwortlichen und des Auftragsverarbeiters zu
+     einschließlich aller Datenverarbeitungsanlagen und -geräte, des \hyperref[itm:04-7]{Verantwortlichen} und des Auftragsverarbeiters zu
      erhalten.
     \label{itm:58-1f}
 
@@ -42,23 +42,23 @@
 
   \begin{enumerate}
   
-    \item einen Verantwortlichen oder einen Auftragsverarbeiter zu warnen, dass beabsichtigte Verarbeitungsvorgänge
+    \item einen \hyperref[itm:04-7]{Verantwortlichen} oder einen Auftragsverarbeiter zu warnen, dass beabsichtigte Verarbeitungsvorgänge
      voraussichtlich gegen diese Verordnung verstoßen,
     \label{itm:58-2a}
 
-    \item einen Verantwortlichen oder einen Auftragsverarbeiter zu verwarnen, wenn er mit Verarbeitungsvorgängen gegen
+    \item einen \hyperref[itm:04-7]{Verantwortlichen} oder einen Auftragsverarbeiter zu verwarnen, wenn er mit Verarbeitungsvorgängen gegen
      diese Verordnung verstoßen hat,
     \label{itm:58-2b}
 
-    \item den Verantwortlichen oder den Auftragsverarbeiter anzuweisen, den Anträgen der \hyperref[itm:04-1]{betroffenen Person} auf Ausübung
+    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den Auftragsverarbeiter anzuweisen, den Anträgen der \hyperref[itm:04-1]{betroffenen Person} auf Ausübung
      der ihr nach dieser Verordnung zustehenden Rechte zu entsprechen,
     \label{itm:58-2c}
 
-    \item den Verantwortlichen oder den Auftragsverarbeiter anzuweisen, Verarbeitungsvorgänge gegebenenfalls auf
+    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den Auftragsverarbeiter anzuweisen, Verarbeitungsvorgänge gegebenenfalls auf
      bestimmte Weise und innerhalb eines bestimmten Zeitraums in Einklang mit dieser Verordnung zu bringen,
     \label{itm:58-2d}
 
-    \item den Verantwortlichen anzuweisen, die von einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} \hyperref[itm:04-1]{betroffenen
+    \item den \hyperref[itm:04-7]{Verantwortlichen} anzuweisen, die von einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} \hyperref[itm:04-1]{betroffenen
      Person} entsprechend zu benachrichtigen,
     \label{itm:58-2e}
 
@@ -94,7 +94,7 @@
 
   \begin{enumerate}
   
-    \item gemäß dem Verfahren der vorherigen Konsultation nach \hyperref[ch:36]{Artikel 36} den Verantwortlichen zu
+    \item gemäß dem Verfahren der vorherigen Konsultation nach \hyperref[ch:36]{Artikel 36} den \hyperref[itm:04-7]{Verantwortlichen} zu
      beraten,
     \label{itm:58-3a}
 
