--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -22,7 +22,7 @@
     \label{itm:70-1b}
 
     \item Beratung der Kommission über das Format und die Verfahren für den Austausch von Informationen zwischen den
-     Verantwortlichen, den Auftragsverarbeitern und den \hyperref[itm:04-21]{Aufsichtsbehörden} in Bezug auf \hyperref[itm:04-20]{verbindliche interne
+     \hyperref[itm:04-7]{Verantwortlichen}, den Auftragsverarbeitern und den \hyperref[itm:04-21]{Aufsichtsbehörden} in Bezug auf \hyperref[itm:04-20]{verbindliche interne
      Datenschutzvorschriften};
     \label{itm:70-1c}
 
@@ -44,7 +44,7 @@
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} für die Feststellung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} und die
      Festlegung der Unverzüglichkeit im Sinne des \hyperref[ch:33]{Artikels 33} Absätze \hyperref[itm:33-1]{1} und
-     \hyperref[itm:33-2]{2}, und zu den spezifischen Umständen, unter denen der Verantwortliche oder der
+     \hyperref[itm:33-2]{2}, und zu den spezifischen Umständen, unter denen der \hyperref[itm:04-7]{Verantwortliche} oder der
      Auftragsverarbeiter die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu melden hat;
     \label{itm:70-1g}
 
@@ -57,7 +57,7 @@
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur näheren Bestimmung der in \hyperref[ch:47]{Artikel 47} aufgeführten Kriterien und
      Anforderungen für die Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten}, die auf \hyperref[itm:04-20]{verbindlichen internen
-     Datenschutzvorschriften} von Verantwortlichen oder Auftragsverarbeitern beruhen, und der dort aufgeführten weiteren
+     Datenschutzvorschriften} von \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeitern beruhen, und der dort aufgeführten weiteren
      erforderlichen Anforderungen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} der \hyperref[itm:04-1]{betroffenen Personen};
     \label{itm:70-1i}
 
@@ -87,7 +87,7 @@
 
     \item Akkreditierung von Zertifizierungsstellen und deren regelmäßige Überprüfung gemäß \hyperref[ch:43]{Artikel 43}
      und Führung eines öffentlichen Registers der akkreditierten Einrichtungen gemäß \hyperref[itm:43-6]{Artikel 43
-     Absatz 6} und der in Drittländern niedergelassenen akkreditierten Verantwortlichen oder Auftragsverarbeiter
+     Absatz 6} und der in Drittländern niedergelassenen akkreditierten \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter
      gemäß \hyperref[itm:42-7]{Artikel 42 Absatz 7};
     \label{itm:70-1o}
 
