--- a/artikel/79.tex
+++ b/artikel/79.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../DSGVO-Bearbeitung.tex
-\chapter{Recht auf wirksamen gerichtlichen Rechtsbehelf gegen Verantwortliche oder Auftragsverarbeiter}
+\chapter{Recht auf wirksamen gerichtlichen Rechtsbehelf gegen \hyperref[itm:04-7]{Verantwortliche} oder Auftragsverarbeiter}
 \label{ch:79}
 
 \addsec{Text der Verordnung}
@@ -13,10 +13,10 @@
    \hyperref[itm:04-1]{personenbezogenen Daten} verletzt wurden.
   \label{itm:79-1}
 
-  \item Für Klagen gegen einen Verantwortlichen oder gegen einen Auftragsverarbeiter sind die Gerichte des
-   Mitgliedstaats zuständig, in dem der Verantwortliche oder der Auftragsverarbeiter eine Niederlassung hat. Wahlweise
+  \item Für Klagen gegen einen \hyperref[itm:04-7]{Verantwortlichen} oder gegen einen Auftragsverarbeiter sind die Gerichte des
+   Mitgliedstaats zuständig, in dem der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter eine Niederlassung hat. Wahlweise
    können solche Klagen auch bei den Gerichten des Mitgliedstaats erhoben werden, in dem die \hyperref[itm:04-1]{betroffene Person} ihren
-   Aufenthaltsort hat, es sei denn, es handelt sich bei dem Verantwortlichen oder dem Auftragsverarbeiter um eine
+   Aufenthaltsort hat, es sei denn, es handelt sich bei dem \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter um eine
    Behörde eines Mitgliedstaats, die in Ausübung ihrer hoheitlichen Befugnisse tätig geworden ist.
   \label{itm:79-2}
 
