--- a/artikel/81.tex
+++ b/artikel/81.tex
@@ -7,12 +7,12 @@
 \begin{enumerate}
 
   \item Erhält ein zuständiges Gericht in einem Mitgliedstaat Kenntnis von einem Verfahren zu demselben Gegenstand in
-   Bezug auf die \hyperref[itm:04-2]{Verarbeitung} durch denselben Verantwortlichen oder Auftragsverarbeiter, das vor einem Gericht in einem
+   Bezug auf die \hyperref[itm:04-2]{Verarbeitung} durch denselben \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter, das vor einem Gericht in einem
    anderen Mitgliedstaat anhängig ist, so nimmt es mit diesem Gericht Kontakt auf, um sich zu vergewissern, dass ein
    solches Verfahren existiert.
   \label{itm:81-1}
 
-  \item Ist ein Verfahren zu demselben Gegenstand in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} durch denselben Verantwortlichen oder
+  \item Ist ein Verfahren zu demselben Gegenstand in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} durch denselben \hyperref[itm:04-7]{Verantwortlichen} oder
    Auftragsverarbeiter vor einem Gericht in einem anderen Mitgliedstaat anhängig, so kann jedes später angerufene
    zuständige Gericht das bei ihm anhängige Verfahren aussetzen.
   \label{itm:81-2}
