--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -27,16 +27,16 @@
     \item Vorsätzlichkeit oder Fahrlässigkeit des Verstoßes;
     \label{itm:83-2b}
 
-    \item jegliche von dem Verantwortlichen oder dem Auftragsverarbeiter getroffenen Maßnahmen zur Minderung des den
+    \item jegliche von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter getroffenen Maßnahmen zur Minderung des den
      \hyperref[itm:04-1]{betroffenen Personen} entstandenen Schadens;
     \label{itm:83-2c}
 
-    \item Grad der Verantwortung des Verantwortlichen oder des Auftragsverarbeiters unter Berücksichtigung der von ihnen
+    \item Grad der Verantwortung des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters unter Berücksichtigung der von ihnen
      gemäß den Artikeln \hyperref[ch:25]{25} und \hyperref[ch:32]{32} getroffenen technischen und organisatorischen
      Maßnahmen;
     \label{itm:83-2d}
 
-    \item etwaige einschlägige frühere Verstöße des Verantwortlichen oder des Auftragsverarbeiters;
+    \item etwaige einschlägige frühere Verstöße des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters;
     \label{itm:83-2e}
 
     \item Umfang der Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde}, um dem Verstoß abzuhelfen und seine möglichen nachteiligen
@@ -47,11 +47,11 @@
     \label{itm:83-2g}
 
     \item Art und Weise, wie der Verstoß der \hyperref[itm:04-21]{Aufsichtsbehörde} bekannt wurde, insbesondere ob und gegebenenfalls in
-     welchem Umfang der Verantwortliche oder der Auftragsverarbeiter den Verstoß mitgeteilt hat;
+     welchem Umfang der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter den Verstoß mitgeteilt hat;
     \label{itm:83-2h}
 
     \item Einhaltung der nach \hyperref[itm:58-2]{Artikel 58 Absatz 2} früher gegen den für den betreffenden
-     Verantwortlichen oder Auftragsverarbeiter in Bezug auf denselben Gegenstand angeordneten Maßnahmen, wenn solche
+     \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter in Bezug auf denselben Gegenstand angeordneten Maßnahmen, wenn solche
      Maßnahmen angeordnet wurden;
     \label{itm:83-2i}
 
@@ -65,7 +65,7 @@
 
   \end{enumerate}
 
-  \item Verstößt ein Verantwortlicher oder ein Auftragsverarbeiter bei gleichen oder miteinander verbundenen
+  \item Verstößt ein \hyperref[itm:04-7]{Verantwortlicher} oder ein Auftragsverarbeiter bei gleichen oder miteinander verbundenen
    Verarbeitungsvorgängen vorsätzlich oder fahrlässig gegen mehrere Bestimmungen dieser Verordnung, so übersteigt der
    Gesamtbetrag der Geldbuße nicht den Betrag für den schwerwiegendsten Verstoß.
   \label{itm:83-3}
@@ -77,7 +77,7 @@
 
   \begin{enumerate}
   
-    \item die Pflichten der Verantwortlichen und der Auftragsverarbeiter gemäß den Artikeln \hyperref[ch:8]{8},
+    \item die Pflichten der \hyperref[itm:04-7]{Verantwortlichen} und der Auftragsverarbeiter gemäß den Artikeln \hyperref[ch:8]{8},
      \hyperref[ch:11]{11}, \hyperref[ch:25]{25} bis \hyperref[ch:39]{39}, \hyperref[ch:42]{42} und \hyperref[ch:43]{43};
     \label{itm:83-4a}
 
