--- a/artikel/90.tex
+++ b/artikel/90.tex
@@ -7,12 +7,12 @@
 \begin{enumerate}
 
   \item Die Mitgliedstaaten können die Befugnisse der \hyperref[itm:04-21]{Aufsichtsbehörden} im Sinne des \hyperref[itm:58-1]{Artikels 58
-   Absatz 1} Buchstaben \hyperref[itm:58-1e]{e} und \hyperref[itm:58-1f]{f} gegenüber den Verantwortlichen oder den
+   Absatz 1} Buchstaben \hyperref[itm:58-1e]{e} und \hyperref[itm:58-1f]{f} gegenüber den \hyperref[itm:04-7]{Verantwortlichen} oder den
    Auftragsverarbeitern, die nach Unionsrecht oder dem Recht der Mitgliedstaaten oder nach einer von den zuständigen
    nationalen Stellen erlassenen Verpflichtung dem Berufsgeheimnis oder einer gleichwertigen Geheimhaltungspflicht
    unterliegen, regeln, soweit dies notwendig und verhältnismäßig ist, um das Recht auf Schutz der personenbezogenen
    Daten mit der Pflicht zur Geheimhaltung in Einklang zu bringen. Diese Vorschriften gelten nur in Bezug auf
-   \hyperref[itm:04-1]{personenbezogene Daten}, die der Verantwortliche oder der Auftragsverarbeiter bei einer Tätigkeit erlangt oder
+   \hyperref[itm:04-1]{personenbezogene Daten}, die der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter bei einer Tätigkeit erlangt oder
    erhoben hat, die einer solchen Geheimhaltungspflicht unterliegt.
   \label{itm:90-1}
 
