--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -54,7 +54,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-7}
 
   \item „Auftragsverarbeiter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, die
-   \hyperref[itm:04-1]{personenbezogene Daten} im Auftrag des Verantwortlichen verarbeitet;
+   \hyperref[itm:04-1]{personenbezogene Daten} im Auftrag des \hyperref[itm:04-7]{Verantwortlichen} verarbeitet;
   \label{itm:04-8}
 
   \item „Empfänger“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, der
@@ -66,8 +66,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-9}
 
   \item „Dritter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, außer der
-   \hyperref[itm:04-1]{betroffenen Person}, dem Verantwortlichen, dem Auftragsverarbeiter und den Personen, die unter der unmittelbaren
-   Verantwortung des Verantwortlichen oder des Auftragsverarbeiters befugt sind, die \hyperref[itm:04-1]{personenbezogenen Daten} zu
+   \hyperref[itm:04-1]{betroffenen Person}, dem \hyperref[itm:04-7]{Verantwortlichen}, dem Auftragsverarbeiter und den Personen, die unter der unmittelbaren
+   Verantwortung des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters befugt sind, die \hyperref[itm:04-1]{personenbezogenen Daten} zu
    verarbeiten;
   \label{itm:04-10}
 
@@ -104,9 +104,9 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \begin{enumerate}
   
-    \item im Falle eines Verantwortlichen mit Niederlassungen in mehr als einem Mitgliedstaat den Ort seiner
+    \item im Falle eines \hyperref[itm:04-7]{Verantwortlichen} mit Niederlassungen in mehr als einem Mitgliedstaat den Ort seiner
      Hauptverwaltung in der Union, es sei denn, die Entscheidungen hinsichtlich der Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung}
-     \hyperref[itm:04-1]{personenbezogener Daten} werden in einer anderen Niederlassung des Verantwortlichen in der Union getroffen und
+     \hyperref[itm:04-1]{personenbezogener Daten} werden in einer anderen Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} in der Union getroffen und
      diese Niederlassung ist befugt, diese Entscheidungen umsetzen zu lassen; in diesem Fall gilt die Niederlassung,
      die derartige Entscheidungen trifft, als Hauptniederlassung;
     \label{itm:04-16a}
@@ -120,8 +120,8 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \end{enumerate}
 
-  \item „Vertreter“ eine in der Union niedergelassene natürliche oder juristische Person, die von dem Verantwortlichen
-   oder Auftragsverarbeiter schriftlich gemäß \hyperref[ch:27]{Artikel 27} bestellt wurde und den Verantwortlichen oder
+  \item „Vertreter“ eine in der Union niedergelassene natürliche oder juristische Person, die von dem \hyperref[itm:04-7]{Verantwortlichen}
+   oder Auftragsverarbeiter schriftlich gemäß \hyperref[ch:27]{Artikel 27} bestellt wurde und den \hyperref[itm:04-7]{Verantwortlichen} oder
    Auftragsverarbeiter in Bezug auf die ihnen jeweils nach dieser Verordnung obliegenden Pflichten vertritt;
   \label{itm:04-17}
 
@@ -135,9 +135,9 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-19}
 
   \item „verbindliche interne Datenschutzvorschriften“ Maßnahmen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten}, zu deren Einhaltung
-   sich ein im Hoheitsgebiet eines Mitgliedstaats niedergelassener Verantwortlicher oder Auftragsverarbeiter
+   sich ein im Hoheitsgebiet eines Mitgliedstaats niedergelassener \hyperref[itm:04-7]{Verantwortlicher} oder Auftragsverarbeiter
    verpflichtet im Hinblick auf Datenübermittlungen oder eine Kategorie von Datenübermittlungen \hyperref[itm:04-1]{personenbezogener Daten}
-   an einen Verantwortlichen oder Auftragsverarbeiter derselben \hyperref[itm:04-19]{Unternehmensgruppe} oder derselben Gruppe von
+   an einen \hyperref[itm:04-7]{Verantwortlichen} oder Auftragsverarbeiter derselben \hyperref[itm:04-19]{Unternehmensgruppe} oder derselben Gruppe von
    \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren Drittländern;
   \label{itm:04-20}
 
@@ -151,7 +151,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \begin{enumerate}
 
-    \item der Verantwortliche oder der Auftragsverarbeiter im Hoheitsgebiet des Mitgliedstaats dieser Aufsichtsbehörde
+    \item der \hyperref[itm:04-7]{Verantwortliche} oder der Auftragsverarbeiter im Hoheitsgebiet des Mitgliedstaats dieser Aufsichtsbehörde
      niedergelassen ist,
     \label{itm:04-22a}
 
@@ -170,19 +170,19 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \begin{enumerate}
 
     \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten von Niederlassungen eines
-     Verantwortlichen oder eines Auftragsverarbeiters in der Union in mehr als einem Mitgliedstaat erfolgt, wenn der
-     Verantwortliche oder Auftragsverarbeiter in mehr als einem Mitgliedstaat niedergelassen ist, oder
+     \hyperref[itm:04-7]{Verantwortlichen} oder eines Auftragsverarbeiters in der Union in mehr als einem Mitgliedstaat erfolgt, wenn der
+     \hyperref[itm:04-7]{Verantwortliche} oder Auftragsverarbeiter in mehr als einem Mitgliedstaat niedergelassen ist, oder
     \label{itm:04-23a}
 
     \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten einer einzelnen Niederlassung eines
-     Verantwortlichen oder eines Auftragsverarbeiters in der Union erfolgt, die jedoch erhebliche Auswirkungen auf
+     \hyperref[itm:04-7]{Verantwortlichen} oder eines Auftragsverarbeiters in der Union erfolgt, die jedoch erhebliche Auswirkungen auf
      \hyperref[itm:04-1]{betroffene Personen} in mehr als einem Mitgliedstaat hat oder haben kann;
     \label{itm:04-23b}
 
   \end{enumerate}
 
   \item „maßgeblicher und begründeter Einspruch“ einen Einspruch gegen einen Beschlussentwurf im Hinblick darauf, ob ein
-   Verstoß gegen diese Verordnung vorliegt oder ob beabsichtigte Maßnahmen gegen den Verantwortlichen oder den
+   Verstoß gegen diese Verordnung vorliegt oder ob beabsichtigte Maßnahmen gegen den \hyperref[itm:04-7]{Verantwortlichen} oder den
    Auftragsverarbeiter im Einklang mit dieser Verordnung steht, wobei aus diesem Einspruch die Tragweite der Risiken
    klar hervorgeht, die von dem Beschlussentwurf in Bezug auf die Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen
    Personen} und gegebenenfalls den freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union ausgehen;
