--- a/artikel/11.tex
+++ b/artikel/11.tex
@@ -6,13 +6,13 @@
 
 \begin{enumerate}
 
-  \item Ist für die Zwecke, für die ein Verantwortlicher \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, die Identifizierung der
-   \hyperref[itm:04-1]{betroffenen Person} durch den Verantwortlichen nicht oder nicht mehr erforderlich, so ist dieser nicht verpflichtet,
+  \item Ist für die Zwecke, für die ein \hyperref[itm:04-7]{Verantwortlicher} \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, die Identifizierung der
+   \hyperref[itm:04-1]{betroffenen Person} durch den \hyperref[itm:04-7]{Verantwortlichen} nicht oder nicht mehr erforderlich, so ist dieser nicht verpflichtet,
    zur bloßen Einhaltung dieser Verordnung zusätzliche Informationen aufzubewahren, einzuholen oder zu verarbeiten, um
    die \hyperref[itm:04-1]{betroffene Person} zu identifizieren.
   \label{itm:11-1}
 
-  \item Kann der Verantwortliche in Fällen gemäß \hyperref[itm:11-1]{Absatz 1} des vorliegenden Artikels nachweisen,
+  \item Kann der \hyperref[itm:04-7]{Verantwortliche} in Fällen gemäß \hyperref[itm:11-1]{Absatz 1} des vorliegenden Artikels nachweisen,
    dass er nicht in der Lage ist, die \hyperref[itm:04-1]{betroffene Person} zu identifizieren, so unterrichtet er die \hyperref[itm:04-1]{betroffene Person}
    hierüber, sofern möglich. In diesen Fällen finden die Artikel \hyperref[ch:15]{15} bis \hyperref[ch:20]{20} keine
    Anwendung, es sei denn, die \hyperref[itm:04-1]{betroffene Person} stellt zur Ausübung ihrer in diesen Artikeln niedergelegten Rechte
