--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -6,13 +6,13 @@
 
 \begin{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so teilt der Verantwortliche der \hyperref[itm:04-1]{betroffenen
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so teilt der \hyperref[itm:04-7]{Verantwortliche} der \hyperref[itm:04-1]{betroffenen
    Person} zum Zeitpunkt der Erhebung dieser Daten Folgendes mit:
   \label{itm:13-1}
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des Verantwortlichen sowie gegebenenfalls seines Vertreters;
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} sowie gegebenenfalls seines Vertreters;
     \label{itm:13-1a}
 
     \item gegebenenfalls die Kontaktdaten des Datenschutzbeauftragten;
@@ -23,13 +23,13 @@
     \label{itm:13-1c}
 
     \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
-     Interessen, die von dem Verantwortlichen oder einem Dritten verfolgt werden;
+     Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem Dritten verfolgt werden;
     \label{itm:13-1d}
 
     \item gegebenenfalls die Empfänger oder Kategorien von Empfängern der \hyperref[itm:04-1]{personenbezogenen Daten} und
     \label{itm:13-1e}
 
-    \item gegebenenfalls die Absicht des Verantwortlichen, die \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder eine
+    \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder eine
      \hyperref[itm:04-29]{internationale Organisation} zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
      Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46} oder
      \hyperref[ch:47]{Artikel 47} oder \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} einen Verweis auf die
@@ -39,7 +39,7 @@
 
   \end{enumerate}
 
-  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:13-1]{Absatz 1} stellt der Verantwortliche der \hyperref[itm:04-1]{betroffenen
+  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:13-1]{Absatz 1} stellt der \hyperref[itm:04-7]{Verantwortliche} der \hyperref[itm:04-1]{betroffenen
    Person} zum Zeitpunkt der Erhebung dieser Daten folgende weitere Informationen zur Verfügung, die notwendig sind, um
    eine faire und transparente \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten:
   \label{itm:13-2}
@@ -50,7 +50,7 @@
      Kriterien für die Festlegung dieser Dauer;
     \label{itm:13-2a}
 
-    \item das Bestehen eines Rechts auf Auskunft seitens des Verantwortlichen über die betreffenden personenbezogenen
+    \item das Bestehen eines Rechts auf Auskunft seitens des \hyperref[itm:04-7]{Verantwortlichen} über die betreffenden personenbezogenen
      Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der Verarbeitung} oder eines Widerspruchsrechts
      gegen die \hyperref[itm:04-2]{Verarbeitung} sowie des Rechts auf Datenübertragbarkeit;
     \label{itm:13-2b}
@@ -76,7 +76,7 @@
 
   \end{enumerate}
 
-  \item Beabsichtigt der Verantwortliche, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
+  \item Beabsichtigt der \hyperref[itm:04-7]{Verantwortliche}, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
    den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, so stellt er der \hyperref[itm:04-1]{betroffenen Person} vor dieser
    Weiterverarbeitung Informationen über diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
    \hyperref[itm:13-2]{Absatz 2} zur Verfügung.
