--- a/artikel/18.tex
+++ b/artikel/18.tex
@@ -6,26 +6,26 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem Verantwortlichen die \hyperref[itm:04-3]{Einschränkung der Verarbeitung} zu verlangen,
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} die \hyperref[itm:04-3]{Einschränkung der Verarbeitung} zu verlangen,
    wenn eine der folgenden Voraussetzungen gegeben ist:
   \label{itm:18-1}
 
   \begin{enumerate}
   
     \item die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} von der \hyperref[itm:04-1]{betroffenen Person} bestritten wird, und zwar für eine
-     Dauer, die es dem Verantwortlichen ermöglicht, die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} zu überprüfen,
+     Dauer, die es dem \hyperref[itm:04-7]{Verantwortlichen} ermöglicht, die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} zu überprüfen,
     \label{itm:18-1a}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} unrechtmäßig ist und die \hyperref[itm:04-1]{betroffene Person} die Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ablehnt
      und stattdessen die Einschränkung der Nutzung der \hyperref[itm:04-1]{personenbezogenen Daten} verlangt;
     \label{itm:18-1b}
 
-    \item der Verantwortliche die \hyperref[itm:04-1]{personenbezogenen Daten} für die Zwecke der \hyperref[itm:04-2]{Verarbeitung} nicht länger benötigt, die
+    \item der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{personenbezogenen Daten} für die Zwecke der \hyperref[itm:04-2]{Verarbeitung} nicht länger benötigt, die
      \hyperref[itm:04-1]{betroffene Person} sie jedoch zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen benötigt, oder
     \label{itm:18-1c}
 
     \item die \hyperref[itm:04-1]{betroffene Person} Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1}
-     eingelegt hat, solange noch nicht feststeht, ob die berechtigten Gründe des Verantwortlichen gegenüber denen der
+     eingelegt hat, solange noch nicht feststeht, ob die berechtigten Gründe des \hyperref[itm:04-7]{Verantwortlichen} gegenüber denen der
      \hyperref[itm:04-1]{betroffenen Person} überwiegen.
     \label{itm:18-1d}
 
@@ -39,7 +39,7 @@
   \label{itm:18-2}
 
   \item Eine \hyperref[itm:04-1]{betroffene Person}, die eine \hyperref[itm:04-3]{Einschränkung der Verarbeitung} gemäß \hyperref[itm:18-1]{Absatz 1} erwirkt hat,
-   wird von dem Verantwortlichen unterrichtet, bevor die Einschränkung aufgehoben wird.
+   wird von dem \hyperref[itm:04-7]{Verantwortlichen} unterrichtet, bevor die Einschränkung aufgehoben wird.
   \label{itm:18-3}
 
 \end{enumerate}
