--- a/artikel/31.tex
+++ b/artikel/31.tex
@@ -4,7 +4,7 @@
 
 \addsec{Text der Verordnung}
 
-Der Verantwortliche und der Auftragsverarbeiter und gegebenenfalls deren Vertreter arbeiten auf Anfrage mit der
+Der \hyperref[itm:04-7]{Verantwortliche} und der Auftragsverarbeiter und gegebenenfalls deren Vertreter arbeiten auf Anfrage mit der
 \hyperref[itm:04-21]{Aufsichtsbehörde} bei der Erfüllung ihrer Aufgaben zusammen.
 
 \addsec{Eigene Notizen}
