--- a/artikel/33.tex
+++ b/artikel/33.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Im Falle einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} meldet der Verantwortliche unverzüglich und
+  \item Im Falle einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} meldet der \hyperref[itm:04-7]{Verantwortliche} unverzüglich und
    möglichst binnen 72 Stunden, nachdem ihm die Verletzung bekannt wurde, diese der gemäß Artikel 51 zuständigen
    \hyperref[itm:04-21]{Aufsichtsbehörde}, es sei denn, dass die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich nicht zu
    einem Risiko für die Rechte und Freiheiten natürlicher Personen führt. Erfolgt die Meldung an die \hyperref[itm:04-21]{Aufsichtsbehörde}
@@ -14,7 +14,7 @@
   \label{itm:33-1}
 
   \item Wenn dem Auftragsverarbeiter eine \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} bekannt wird, meldet er diese
-   dem Verantwortlichen unverzüglich.
+   dem \hyperref[itm:04-7]{Verantwortlichen} unverzüglich.
   \label{itm:33-2}
 
   \item Die Meldung gemäß \hyperref[itm:33-1]{Absatz 1} enthält zumindest folgende Informationen:
@@ -34,18 +34,18 @@
     \item eine Beschreibung der wahrscheinlichen Folgen der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten};
     \label{itm:33-3c}
 
-    \item eine Beschreibung der von dem Verantwortlichen ergriffenen oder vorgeschlagenen Maßnahmen zur Behebung der
+    \item eine Beschreibung der von dem \hyperref[itm:04-7]{Verantwortlichen} ergriffenen oder vorgeschlagenen Maßnahmen zur Behebung der
      \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} und gegebenenfalls Maßnahmen zur Abmilderung ihrer möglichen
      nachteiligen Auswirkungen.
     \label{itm:33-3d}
 
   \end{enumerate}
 
-  \item Wenn und soweit die Informationen nicht zur gleichen Zeit bereitgestellt werden können, kann der Verantwortliche
+  \item Wenn und soweit die Informationen nicht zur gleichen Zeit bereitgestellt werden können, kann der \hyperref[itm:04-7]{Verantwortliche}
    diese Informationen ohne unangemessene weitere Verzögerung schrittweise zur Verfügung stellen.
   \label{itm:33-4}
 
-  \item Der Verantwortliche dokumentiert \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} einschließlich aller im
+  \item Der \hyperref[itm:04-7]{Verantwortliche} dokumentiert \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} einschließlich aller im
    Zusammenhang mit der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} stehenden Fakten, von deren Auswirkungen und
    der ergriffenen Abhilfemaßnahmen. Diese Dokumentation muss der \hyperref[itm:04-21]{Aufsichtsbehörde} die Überprüfung der Einhaltung der
    Bestimmungen dieses Artikels ermöglichen.
