--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Hat die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich ein hohes Risiko für die persönlichen
-   Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der Verantwortliche die \hyperref[itm:04-1]{betroffene Person}
+   Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{betroffene Person}
    unverzüglich von der Verletzung.
   \label{itm:34-1}
 
@@ -23,13 +23,13 @@
 
   \begin{enumerate}
   
-    \item der Verantwortliche geeignete technische und organisatorische Sicherheitsvorkehrungen getroffen hat und diese
+    \item der \hyperref[itm:04-7]{Verantwortliche} geeignete technische und organisatorische Sicherheitsvorkehrungen getroffen hat und diese
      Vorkehrungen auf die von der Verletzung betroffenen \hyperref[itm:04-1]{personenbezogenen Daten} angewandt wurden, insbesondere solche,
      durch die die \hyperref[itm:04-1]{personenbezogenen Daten} für alle Personen, die nicht zum Zugang zu den \hyperref[itm:04-1]{personenbezogenen Daten}
      befugt sind, unzugänglich gemacht werden, etwa durch Verschlüsselung;
     \label{itm:34-3a}
 
-    \item der Verantwortliche durch nachfolgende Maßnahmen sichergestellt hat, dass das hohe Risiko für die Rechte und
+    \item der \hyperref[itm:04-7]{Verantwortliche} durch nachfolgende Maßnahmen sichergestellt hat, dass das hohe Risiko für die Rechte und
      Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß \hyperref[itm:34-1]{Absatz 1} aller Wahrscheinlichkeit nach nicht mehr
      besteht;
     \label{itm:34-3b}
@@ -41,9 +41,9 @@
 
   \end{enumerate}
 
-  \item Wenn der Verantwortliche die \hyperref[itm:04-1]{betroffene Person} nicht bereits über die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener
+  \item Wenn der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{betroffene Person} nicht bereits über die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener
    Daten} benachrichtigt hat, kann die \hyperref[itm:04-21]{Aufsichtsbehörde} unter Berücksichtigung der Wahrscheinlichkeit, mit der die
-   \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu einem hohen Risiko führt, von dem Verantwortlichen verlangen,
+   \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu einem hohen Risiko führt, von dem \hyperref[itm:04-7]{Verantwortlichen} verlangen,
    dies nachzuholen, oder sie kann mit einem Beschluss feststellen, dass bestimmte der in \hyperref[itm:34-3]{Absatz 3}
    genannten Voraussetzungen erfüllt sind.
   \label{itm:34-4}
