--- a/artikel/38.tex
+++ b/artikel/38.tex
@@ -6,21 +6,21 @@
 
 \begin{enumerate}
 
-  \item Der Verantwortliche und der Auftragsverarbeiter stellen sicher, dass der Datenschutzbeauftragte ordnungsgemäß
+  \item Der \hyperref[itm:04-7]{Verantwortliche} und der Auftragsverarbeiter stellen sicher, dass der Datenschutzbeauftragte ordnungsgemäß
    und frühzeitig in alle mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} zusammenhängenden Fragen eingebunden wird.
   \label{itm:38-1}
 
-  \item Der Verantwortliche und der Auftragsverarbeiter unterstützen den Datenschutzbeauftragten bei der Erfüllung
+  \item Der \hyperref[itm:04-7]{Verantwortliche} und der Auftragsverarbeiter unterstützen den Datenschutzbeauftragten bei der Erfüllung
    seiner Aufgaben gemäß \hyperref[ch:39]{Artikel 39}, indem sie die für die Erfüllung dieser Aufgaben erforderlichen
    Ressourcen und den Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} und Verarbeitungsvorgängen sowie die zur Erhaltung seines
    Fachwissens erforderlichen Ressourcen zur Verfügung stellen.
   \label{itm:38-2}
 
-  \item Der Verantwortliche und der Auftragsverarbeiter stellen sicher, dass der Datenschutzbeauftragte bei der
+  \item Der \hyperref[itm:04-7]{Verantwortliche} und der Auftragsverarbeiter stellen sicher, dass der Datenschutzbeauftragte bei der
    Erfüllung seiner Aufgaben keine Anweisungen bezüglich der Ausübung dieser Aufgaben erhält. Der
-   Datenschutzbeauftragte darf von dem Verantwortlichen oder dem Auftragsverarbeiter wegen der Erfüllung seiner
+   Datenschutzbeauftragte darf von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem Auftragsverarbeiter wegen der Erfüllung seiner
    Aufgaben nicht abberufen oder benachteiligt werden. Der Datenschutzbeauftragte berichtet unmittelbar der höchsten
-   Managementebene des Verantwortlichen oder des Auftragsverarbeiters.
+   Managementebene des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters.
   \label{itm:38-3}
 
   \item \hyperref[itm:04-1]{Betroffene Personen} können den Datenschutzbeauftragten zu allen mit der \hyperref[itm:04-2]{Verarbeitung} ihrer personenbezogenen
@@ -31,7 +31,7 @@
    Aufgaben an die Wahrung der Geheimhaltung oder der Vertraulichkeit gebunden.
   \label{itm:38-5}
 
-  \item Der Datenschutzbeauftragte kann andere Aufgaben und Pflichten wahrnehmen. Der Verantwortliche oder der
+  \item Der Datenschutzbeauftragte kann andere Aufgaben und Pflichten wahrnehmen. Der \hyperref[itm:04-7]{Verantwortliche} oder der
    Auftragsverarbeiter stellt sicher, dass derartige Aufgaben und Pflichten nicht zu einem Interessenkonflikt führen.
   \label{itm:38-6}
 
