--- a/artikel/56.tex
+++ b/artikel/56.tex
@@ -7,8 +7,8 @@
 \begin{enumerate}
 
   \item Unbeschadet des \hyperref[ch:55]{Artikels 55} ist die \hyperref[itm:04-21]{Aufsichtsbehörde} der \hyperref[itm:04-16]{Hauptniederlassung} oder der einzigen
-   Niederlassung des Verantwortlichen oder des Auftragsverarbeiters gemäß dem Verfahren nach \hyperref[ch:60]
-   {Artikel 60} die zuständige federführende \hyperref[itm:04-21]{Aufsichtsbehörde} für die von diesem Verantwortlichen oder diesem
+   Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder des Auftragsverarbeiters gemäß dem Verfahren nach \hyperref[ch:60]
+   {Artikel 60} die zuständige federführende \hyperref[itm:04-21]{Aufsichtsbehörde} für die von diesem \hyperref[itm:04-7]{Verantwortlichen} oder diesem
    Auftragsverarbeiter durchgeführte \hyperref[itm:04-23]{grenzüberschreitende Verarbeitung}.
   \label{itm:56-1}
 
@@ -21,7 +21,7 @@
   \item In den in \hyperref[itm:56-2]{Absatz 2 des vorliegenden Artikels} genannten Fällen unterrichtet die
    \hyperref[itm:04-21]{Aufsichtsbehörde} unverzüglich die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} über diese Angelegenheit. Innerhalb einer Frist von
    drei Wochen nach der Unterrichtung entscheidet die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, ob sie sich mit dem Fall gemäß
-   dem Verfahren nach \hyperref[ch:60]{Artikel 60} befasst oder nicht, wobei sie berücksichtigt, ob der Verantwortliche
+   dem Verfahren nach \hyperref[ch:60]{Artikel 60} befasst oder nicht, wobei sie berücksichtigt, ob der \hyperref[itm:04-7]{Verantwortliche}
    oder der Auftragsverarbeiter in dem Mitgliedstaat, dessen \hyperref[itm:04-21]{Aufsichtsbehörde} sie unterrichtet hat, eine Niederlassung
    hat oder nicht.
   \label{itm:56-3}
@@ -37,8 +37,8 @@
    \hyperref[ch:61]{61} und \hyperref[ch:62]{62}.
   \label{itm:56-5}
 
-  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} ist der einzige Ansprechpartner der Verantwortlichen oder der
-   Auftragsverarbeiter für Fragen der von diesem Verantwortlichen oder diesem Auftragsverarbeiter durchgeführten
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} ist der einzige Ansprechpartner der \hyperref[itm:04-7]{Verantwortlichen} oder der
+   Auftragsverarbeiter für Fragen der von diesem \hyperref[itm:04-7]{Verantwortlichen} oder diesem Auftragsverarbeiter durchgeführten
    \hyperref[itm:04-23]{grenzüberschreitenden Verarbeitung}.
   \label{itm:56-6}
 
